--- a/CorrectivePreventiveActions/listCorrectiveActions.html
+++ b/CorrectivePreventiveActions/listCorrectiveActions.html
@@ -125,7 +125,7 @@
                                <i class="fa fa-plus-square"></i>
                                <span>Document</span>
                             </a>
-                             <ul class="sub">
+                             <ul class="sub sub-sub">
                               <li><a href="../document/addDocument.html">Add Document</a></li>
                               <li><a href="../document/viewDocumentRevision.html">View Revision</a></li>
                               <li><a href="../document/viewDocumentDetails.html">View Documents</a></li>
@@ -136,7 +136,7 @@
                                <i class="fa fa-plus-square"></i>
                                <span>Forms/Records</span>
                             </a>
-                             <ul class="sub">
+                             <ul class="sub sub-sub">
                               <li><a href="../forms/addForm.html">Add Form</a></li>
                               <li><a href="../forms/viewFormRevision.html">View Revision</a></li>
                               <li><a href="../forms/viewFormDetails.html">View Forms</a></li>
@@ -207,7 +207,7 @@
     <ol class="breadcrumb">
       <li><a href="../index.html">QMS</a></li>
       <li><a href="#">Corrective and Preventive Actions</a></li>
-      <li><a href="../CorrectivePreventiveActions/viewMCorrectiveActions.html">View Corrective Preventive Action Detaials</a></li>
+      <li><a href="../CorrectivePreventiveActions/viewCorrectiveActions.html">View Corrective Preventive Action Detaials</a></li>
       <li><a href="#">List Corrective Preventive Action Details</a></li>
     </ol>
   </div>
@@ -224,131 +224,131 @@
       <div class="box-content">
         <form class="form-horizontal" role="form" id="ow-summary">
           <div class="form-group">
-            <label class="col-sm-2 control-label">CAPA ID</label>
-            <div class="col-sm-2"><b>CA1111</b></div>
+            <label class="col-sm-2 control-label"><b>CAPA ID</b></label>
+            <div class="col-sm-2">CA1111</div>
             <div class="col-sm-2"></div>
-            <label class="col-sm-2 control-label">NonConformance ID</label>
+            <label class="col-sm-2 control-label"><b>NonConformance ID</b></label>
             <div class="col-sm-2">
-              <b>NC1232</b>
+              NC1232
             </div>
             <div class="col-sm-2"></div>
           </div>
 
           <div class="form-group">
-            <label class="col-sm-2 control-label">External ID</label>
+            <label class="col-sm-2 control-label"><b>External ID</b></label>
             <div class="col-sm-2">
 
-              <b>EX13432</b>
+              EX13432
             </div>
             <div class="col-sm-2"></div>
-            <label class="col-sm-2 control-label">Source of NC</label>
+            <label class="col-sm-2 control-label"><b>Source of NC</b></label>
             <div class="col-sm-2">
-              <b>Sample Process3</b>
-            </div>
-            <div class="col-sm-2"></div>
-          </div>
-
-          <div class="form-group">
-            <label class="col-sm-2 control-label">Date Found</label>
-            <div class="col-sm-2">
-
-              <b>04/30/2015</b>
-            </div>
-            <div class="col-sm-2"></div>
-            <label class="col-sm-2 control-label">Type of NC</label>
-            <div class="col-sm-2">
-              <b>Type of NC</b>
+              Sample Process3
             </div>
             <div class="col-sm-2"></div>
           </div>
 
           <div class="form-group">
-            <label class="col-sm-2 control-label">Temporary Action</label>
+            <label class="col-sm-2 control-label"><b>Date Found</b></label>
             <div class="col-sm-2">
 
-              <b>Temporary Action</b>
+              04/30/2015
             </div>
             <div class="col-sm-2"></div>
-            <label class="col-sm-2 control-label">Nature of NC</label>
+            <label class="col-sm-2 control-label"><b>Type of NC</b></label>
             <div class="col-sm-2">
-              <b>Nature of NC</b>
-            </div>
-            <div class="col-sm-2"></div>
-          </div>
-
-          <div class="form-group">
-            <label class="col-sm-2 control-label">CAPA Requestor </label>
-            <div class="col-sm-2">
-
-              <b>CAPA Requestor</b>
-            </div>
-            <div class="col-sm-2"></div>
-            <label class="col-sm-2 control-label">Use 5 Whys's in system (Y/N) (*Optional)</label>
-            <div class="col-sm-2">
-              <b>Yes</b>
+              Type of NC
             </div>
             <div class="col-sm-2"></div>
           </div>
 
           <div class="form-group">
-            <label class="col-sm-2 control-label">Request Date</label>
+            <label class="col-sm-2 control-label"><b>Temporary Action</b></label>
             <div class="col-sm-2">
 
-              <b>08/06/2015</b>
+              Temporary Action
             </div>
             <div class="col-sm-2"></div>
-            <label class="col-sm-2 control-label">Why's ?</label>
+            <label class="col-sm-2 control-label"><b>Nature of NC</b></label>
             <div class="col-sm-2">
-              <b>Yes</b><br>
-              <b>Something</b>
+              Nature of NC
             </div>
             <div class="col-sm-2"></div>
           </div>
 
           <div class="form-group">
-            <label class="col-sm-2 control-label">CAPA Due Date</label>
+            <label class="col-sm-2 control-label"><b>CAPA Requestor </b></label>
             <div class="col-sm-2">
 
-              <b>08/23/2015</b>
+              CAPA Requestor
             </div>
             <div class="col-sm-2"></div>
-            <label class="col-sm-2 control-label">Root Cause Statement</label>
+            <label class="col-sm-2 control-label"><b>Use 5 Whys's in system (Y/N) (*Optional)</b></label>
             <div class="col-sm-2">
-              <b>Root Cause Statement</b>
+              Yes
+            </div>
+            <div class="col-sm-2"></div>
+          </div>
+
+          <div class="form-group">
+            <label class="col-sm-2 control-label"><b>Request Date</b></label>
+            <div class="col-sm-2">
+
+              08/06/2015
+            </div>
+            <div class="col-sm-2"></div>
+            <label class="col-sm-2 control-label"><b>Why's ?</b></label>
+            <div class="col-sm-2">
+              Yes<br>
+              Something
+            </div>
+            <div class="col-sm-2"></div>
+          </div>
+
+          <div class="form-group">
+            <label class="col-sm-2 control-label"><b>CAPA Due Date</b></label>
+            <div class="col-sm-2">
+
+              08/23/2015
+            </div>
+            <div class="col-sm-2"></div>
+            <label class="col-sm-2 control-label"><b>Root Cause Statement</b></label>
+            <div class="col-sm-2">
+              Root Cause Statement
             </div>
             <div class="col-sm-2"></div>
           </div>
             <div class="form-group">
-            <label class="col-sm-2 control-label">Assigned Team Leader</label>
+            <label class="col-sm-2 control-label"><b>Assigned Team Leader</b></label>
             <div class="col-sm-2">
 
-              <b>Nellson</b>
+              Nellson
             </div>
             <div class="col-sm-2"></div>
-            <label class="col-sm-2 control-label">Upload External Analysis (Y/N)(*Optional)</label>
+            <label class="col-sm-2 control-label"><b>Upload External Analysis (Y/N)(*Optional)</b></label>
             <div class="col-sm-2">
-              <b>No</b>
+              No
             </div>
             <div class="col-sm-2"></div>
           </div>
             <div class="form-group">
-            <label class="col-sm-2 control-label">Team Member (s)</label>
+            <label class="col-sm-2 control-label"><b>Team Member (s)</b></label>
             <div class="col-sm-2">
 
-              <b>Team Member</b>
+              Team Member
             </div>
             <div class="col-sm-2"></div>
-            <label class="col-sm-2 control-label">Root-Cause Analysis File</label>
+            <label class="col-sm-2 control-label"><b>Root-Cause Analysis File</b></label>
             <div class="col-sm-2">
-              <b>Root Cause Analysis</b>
+              Root Cause Analysis
             </div>
             <div class="col-sm-2"></div>
           </div>
            <div class="form-group">
-            <label class="col-sm-2 control-label">Upload</label>
+            <label class="col-sm-2 control-label"><b>Upload</b></label>
             <div class="col-sm-2">
 
-              <b>No Document</b>
+              No Document
             </div>
           </div>
         </form> 
@@ -361,39 +361,39 @@
             <div class="box-content">
               <form class="form-horizontal" role="form" id="ow-summary">
                 <div class="form-group">
-                  <label class="col-sm-2 control-label">Action</label>
+                  <label class="col-sm-2 control-label"><b>Action</b></label>
                   <div class="col-sm-2">
-                    <b>Audits</b>
+                    Audits
                   </div>
                   <div class="col-sm-2"></div>
-                  <label for="date_example" class="col-sm-2 control-label">Due Date</label>
+                  <label for="date_example" class="col-sm-2 control-label"><b>Due Date</b></label>
                   <div class="col-sm-2">
-                    <b>11/20/2015</b>
+                    11/20/2015
                   </div>
                   <div class="col-sm-2"></div>
                 </div>
 
                 <div class="form-group">
-            <label class="col-sm-2 control-label">Verified By</label>
+            <label class="col-sm-2 control-label"><b>Verified By</b></label>
             <div class="col-sm-2">
-              <b>Andewson</b>
+              Andewson
             </div>
             <div class="col-sm-2"></div>
-            <label class="col-sm-2 control-label">Responsibity</label>
+            <label class="col-sm-2 control-label"><b>Responsibity</b></label>
             <div class="col-sm-2">
-              <b>Jackson</b>
+              Jackson
             </div>
             <div class="col-sm-2"></div>
           </div>
           <div class="form-group">
-            <label class="col-sm-2 control-label">Completion Date</label>
+            <label class="col-sm-2 control-label"><b>Completion Date</b></label>
             <div class="col-sm-2">
-              <b>10/02/2015</b>
+              10/02/2015
             </div>
             <div class="col-sm-2"></div>
-            <label class="col-sm-2 control-label">Verification Date</label>
+            <label class="col-sm-2 control-label"><b>Verification Date</b></label>
             <div class="col-sm-2">
-              <b>11/29/2015</b>
+              11/29/2015
             </div>
             <div class="col-sm-2"></div>
           </div>  
