--- a/Customers/editCustomer.html
+++ b/Customers/editCustomer.html
@@ -125,7 +125,7 @@
                                <i class="fa fa-plus-square"></i>
                                <span>Document</span>
                             </a>
-                             <ul class="sub">
+                             <ul class="sub sub-sub">
                               <li><a href="../document/addDocument.html">Add Document</a></li>
                               <li><a href="../document/viewDocumentRevision.html">View Revision</a></li>
                               <li><a href="../document/viewDocumentDetails.html">View Documents</a></li>
@@ -136,7 +136,7 @@
                                <i class="fa fa-plus-square"></i>
                                <span>Forms/Records</span>
                             </a>
-                             <ul class="sub">
+                             <ul class="sub sub-sub">
                               <li><a href="../forms/addForm.html">Add Form</a></li>
                               <li><a href="../forms/viewFormRevision.html">View Revision</a></li>
                               <li><a href="../forms/viewFormDetails.html">View Forms</a></li>
@@ -225,69 +225,69 @@
 				<form class="form-horizontal" role="form">
 					<div class="form-group">
 						<label class="col-sm-2 control-label">Customer ID</label>
-						<div class="col-sm-4">
-							<input type="text" readonly="true" class="form-control" value="C1033" placeholder="" disabled/>
+						<div class="col-sm-3">
+							<input type="text" class="form-control" value="C1033" placeholder="" disabled/>
 						</div>
-						<label class="col-sm-2 control-label">Website</label>
-						<div class="col-sm-4">
+						<div class="col-sm-1"></div><label class="col-sm-2 control-label">Website</label>
+						<div class="col-sm-3">
               <input type="text" class="form-control" value="www.mySite.com" id="" placeholder="www.example.com" disabled>
 						</div>
 					</div>
 
 					<div class="form-group">
 						<label class="col-sm-2 control-label">Customer Name</label>
-						<div class="col-sm-4">
+						<div class="col-sm-3">
 							 <input type="text" class="form-control" id="" value="Nellson" disabled>
 						</div>
-						<label class="col-sm-2 control-label">Contact Name</label>
-						<div class="col-sm-4">
+						<div class="col-sm-1"></div><label class="col-sm-2 control-label">Contact Name</label>
+						<div class="col-sm-3">
 							<input type="text" class="form-control" placeholder="" value="Nelli" disabled>
 						</div>
 					</div>
 
 					<div class="form-group">
 						<label class="col-sm-2 control-label">Address</label>
-						<div class="col-sm-4" >
+						<div class="col-sm-3">
 							 <textarea class="form-control" rows="3" disabled>2-2334, 3rd Floor,Ohio.</textarea>
 						</div>
-          <label class="col-sm-2 control-label">Contact Title</label>
-            <div class="col-sm-4">
+          <div class="col-sm-1"></div><label class="col-sm-2 control-label">Contact Title</label>
+            <div class="col-sm-3">
               <input type="text" class="form-control" placeholder="" value="QMS" disabled>
             </div>
 					</div>
             <div class="form-group">
             <label class="col-sm-2 control-label">City </label>
-            <div class="col-sm-4" >
+            <div class="col-sm-3">
                <input type="text" class="form-control" value="Newsquard" disabled>
             </div>
-          <label class="col-sm-2 control-label">Telephone</label>
-            <div class="col-sm-4">
+          <div class="col-sm-1"></div><label class="col-sm-2 control-label">Telephone</label>
+            <div class="col-sm-3">
               <input type="text" class="form-control" placeholder="" value="01232-212" disabled>
             </div>
           </div>
             <div class="form-group">
             <label class="col-sm-2 control-label">State </label>
-            <div class="col-sm-4" >
+            <div class="col-sm-3">
                 <input type="text" class="form-control" value="Ohio" disabled>
             </div>
-          <label class="col-sm-2 control-label">Fax </label>
-            <div class="col-sm-4">
+          <div class="col-sm-1"></div><label class="col-sm-2 control-label">Fax </label>
+            <div class="col-sm-3">
               <input type="text" class="form-control" placeholder="" value="654-4443" disabled>
             </div>
           </div>
             <div class="form-group">
             <label class="col-sm-2 control-label">Country </label>
-            <div class="col-sm-4" >
+            <div class="col-sm-3">
               <input type="text" class="form-control" value="USA" disabled>
             </div>
-          <label class="col-sm-2 control-label">Email </label>
-            <div class="col-sm-4">
+          <div class="col-sm-1"></div><label class="col-sm-2 control-label">Email </label>
+            <div class="col-sm-3">
               <input type="text" class="form-control" placeholder="" value="nellon@gmail.com" disabled>
             </div>
           </div>
             <div class="form-group">
             <label class="col-sm-2 control-label">ZipCode</label>
-            <div class="col-sm-4" >
+            <div class="col-sm-3">
                <input type="text" class="form-control" value="OH4534" disabled>
             </div>
           </div>
@@ -304,14 +304,14 @@
 							<form class="form-horizontal" role="form">
 								<div class="form-group">
 									<label class="col-sm-2 control-label">Date of Feedback</label>
-									<div class="col-sm-4">
-                        <input type="text" class="form-control" id="dueDate" placeholder="Date picker" value="08/08/2015">
+									<div class="col-sm-3">
+                        <input type="text" class="form-control" id="dueDate" placeholder="Select Date" value="08/08/2015">
 									</div>
 								</div>
 
 								<div class="form-group">
 									<label class="col-sm-2 control-label">Type of Feedback  </label>
-									<div class="col-sm-4">
+									<div class="col-sm-3">
                       <select class="form-control">
                         <option value="1">Complaint</option>
                         <option value="2">Suggestion</option>
@@ -324,7 +324,7 @@
 
 								<div class="form-group">
 									<label class="col-sm-2 control-label">Feedback Recorded by</label>
-									<div class="col-sm-4">
+									<div class="col-sm-3">
 										<select class="form-control">
                         <option value="1">Associate Name1</option>
                         <option value="2" selected>Associate Name2</option>
@@ -334,15 +334,20 @@
 							</div>
               <div class="form-group">
                   <label class="col-sm-2 control-label">See Feedback Details Below</label>
-                  <div class="col-sm-4">
+                  <div class="col-sm-3">
                     <textarea class="form-control" rows="3">Some kind of noctice</textarea>
                   </div>
               </div>
               <div class="form-group">
                   <label class="col-sm-2 control-label">Attachments</label>
-                  <div class="col-sm-4">
-                       <input name="attachments"  id="" type="file" /> attachement.pdf
-                  </div>
+                  <div class="col-sm-3 input-group">
+                <span class="input-group-btn">
+                <button type="button" class="btn btn-primary btn-sm btn-file" id="browse">
+                        Browse&hellip;
+                 <input name="attachments"  id="electronicchecked" type="file" multiple/> 
+                </button></span>
+                 <input type="text" class="form-control uploadInput" value="attachemnt.pdf" readonly>
+             </div>
                   <div class="col-sm-6"></div>
               </div>
 							<div class="form-group" id="showbutton">
