--- a/Customers/listCustomer.html
+++ b/Customers/listCustomer.html
@@ -124,7 +124,7 @@
                                <i class="fa fa-plus-square"></i>
                                <span>Document</span>
                             </a>
-                             <ul class="sub">
+                             <ul class="sub sub-sub">
                               <li><a href="../document/addDocument.html">Add Document</a></li>
                               <li><a href="../document/viewDocumentRevision.html">View Revision</a></li>
                               <li><a href="../document/viewDocumentDetails.html">View Documents</a></li>
@@ -135,7 +135,7 @@
                                <i class="fa fa-plus-square"></i>
                                <span>Forms/Records</span>
                             </a>
-                             <ul class="sub">
+                             <ul class="sub sub-sub">
                               <li><a href="../forms/addForm.html">Add Form</a></li>
                               <li><a href="../forms/viewFormRevision.html">View Revision</a></li>
                               <li><a href="../forms/viewFormDetails.html">View Forms</a></li>
@@ -223,85 +223,85 @@
 			<div class="box-content">
 				<form class="form-horizontal" role="form" id="ow-summary">
 					<div class="form-group">
-						<label class="col-sm-2 control-label">Customer ID</label>
-						<div class="col-sm-2"><b>C1111</b></div>
+						<label class="col-sm-2 control-label"><b>Customer ID</b></label>
+						<div class="col-sm-2">C1111</div>
 						<div class="col-sm-2"></div>
-						<label class="col-sm-2 control-label">Website</label>
+						<label class="col-sm-2 control-label"><b>Website</b></label>
 						<div class="col-sm-2">
-							<b>www.mySite.com</b>
+							www.mySite.com
 						</div>
 						<div class="col-sm-2"></div>
 					</div>
 
 					<div class="form-group">
-						<label class="col-sm-2 control-label">Customer Name</label>
+						<label class="col-sm-2 control-label"><b>Customer Name</b></label>
 						<div class="col-sm-2">
 
-							<b>Nellson</b>
+							Nellson
 						</div>
 						<div class="col-sm-2"></div>
-						<label class="col-sm-2 control-label">Contact Name</label>
+						<label class="col-sm-2 control-label"><b>Contact Name</b></label>
 						<div class="col-sm-2">
-							<b>Nelli</b>
+							Nelli
 						</div>
 						<div class="col-sm-2"></div>
 					</div>
           <div class="form-group">
-            <label class="col-sm-2 control-label">Address</label>
+            <label class="col-sm-2 control-label"><b>Address</b></label>
             <div class="col-sm-2">
-              <b>2-345,3rd Floor</b><br>
-              <b>Ohio</b>
+              2-345,3rd Floor<br>
+              Ohio
             </div>
             <div class="col-sm-2"></div>
-             <label class="col-sm-2 control-label">Contact Title</label>
+             <label class="col-sm-2 control-label"><b>Contact Title</b></label>
             <div class="col-sm-2">
-              <b>QMS</b>
-            </div>
-            <div class="col-sm-2"></div>
-          </div>
-          <div class="form-group">
-            <label class="col-sm-2 control-label">City</label>
-            <div class="col-sm-2">
-              <b>NewSquard</b>
-            </div>
-            <div class="col-sm-2"></div>
-            <label class="col-sm-2 control-label">Telephone</label>
-            <div class="col-sm-2">
-              <b>01334-4443-22</b>
+              QMS
             </div>
             <div class="col-sm-2"></div>
           </div>
           <div class="form-group">
-            <label class="col-sm-2 control-label">State</label>
+            <label class="col-sm-2 control-label"><b>City</b></label>
+            <div class="col-sm-2">
+              NewSquard
+            </div>
+            <div class="col-sm-2"></div>
+            <label class="col-sm-2 control-label"><b>Telephone</b></label>
+            <div class="col-sm-2">
+              01334-4443-22
+            </div>
+            <div class="col-sm-2"></div>
+          </div>
+          <div class="form-group">
+            <label class="col-sm-2 control-label"><b>State</b></label>
             <div class="col-sm-2">
 
-              <b>Ohio</b>
+              Ohio
             </div>
             <div class="col-sm-2"></div>
-            <label class="col-sm-2 control-label">Fax</label>
+            <label class="col-sm-2 control-label"><b>Fax</b></label>
             <div class="col-sm-2">
-              <b>003454</b>
-            </div>
-            <div class="col-sm-2"></div>
-          </div>
-          <div class="form-group">
-            <label class="col-sm-2 control-label">Country</label>
-            <div class="col-sm-2">
-
-              <b>USA</b>
-            </div>
-            <div class="col-sm-2"></div>
-            <label class="col-sm-2 control-label">Email</label>
-            <div class="col-sm-2">
-              <b>Nelli.gmail.com</b>
+              003454
             </div>
             <div class="col-sm-2"></div>
           </div>
           <div class="form-group">
-            <label class="col-sm-2 control-label">ZipCode</label>
+            <label class="col-sm-2 control-label"><b>Country</b></label>
             <div class="col-sm-2">
 
-              <b>OH935</b>
+              USA
+            </div>
+            <div class="col-sm-2"></div>
+            <label class="col-sm-2 control-label"><b>Email</b></label>
+            <div class="col-sm-2">
+              Nelli.gmail.com
+            </div>
+            <div class="col-sm-2"></div>
+          </div>
+          <div class="form-group">
+            <label class="col-sm-2 control-label"><b>ZipCode</b></label>
+            <div class="col-sm-2">
+
+              OH935
             </div>
             <div class="col-sm-2"></div>
           </div>
@@ -316,38 +316,38 @@
 						<div class="box-content">
 							<form class="form-horizontal" role="form" id="ow-summary">
 								<div class="form-group">
-									<label class="col-sm-2 control-label">Date of Feedback</label>
+									<label class="col-sm-2 control-label"><b>Date of Feedback</b></label>
 									<div class="col-sm-2">
-										<b>06/04/2015</b>
+										06/04/2015
 									</div>
 									<div class="col-sm-2"></div>
 								</div>
 
 								<div class="form-group">
-						<label class="col-sm-2 control-label">Type of Feedback</label>
+						<label class="col-sm-2 control-label"><b>Type of Feedback</b></label>
 						<div class="col-sm-2">
-							<b>Complaint</b>
+							Complaint
 						</div>
 						<div class="col-sm-2"></div>
 					</div>
 					<div class="form-group">
-						<label class="col-sm-2 control-label">Feedback Recorded by</label>
+						<label class="col-sm-2 control-label"><b>Feedback Recorded by</b></label>
 						<div class="col-sm-2">
-							<b>Associate Name1</b>
+							Associate Name1
 						</div>
             <div class="col-sm-2"></div>
 					</div>	
             <div class="form-group">
-            <label class="col-sm-2 control-label">See Feedback Details Below</label>
+            <label class="col-sm-2 control-label"><b>See Feedback Details Below</b></label>
             <div class="col-sm-2">
-              <b>Needed</b>
+              Needed
             </div>
             <div class="col-sm-2"></div>
           </div>  
             <div class="form-group">
-            <label class="col-sm-2 control-label">Attachments</label>
+            <label class="col-sm-2 control-label"><b>Attachments</b></label>
             <div class="col-sm-2">
-              <b><a href="#">attachemnt.pdf</a></b>
+              <a href="#">attachemnt.pdf</a>
             </div>
             <div class="col-sm-8"></div>
           </div> 
