--- a/HRandTraining/listHR.html
+++ b/HRandTraining/listHR.html
@@ -125,7 +125,7 @@
                                <i class="fa fa-plus-square"></i>
                                <span>Document</span>
                             </a>
-                             <ul class="sub">
+                             <ul class="sub sub-sub">
                               <li><a href="../document/addDocument.html">Add Document</a></li>
                               <li><a href="../document/viewDocumentRevision.html">View Revision</a></li>
                               <li><a href="../document/viewDocumentDetails.html">View Documents</a></li>
@@ -136,7 +136,7 @@
                                <i class="fa fa-plus-square"></i>
                                <span>Forms/Records</span>
                             </a>
-                             <ul class="sub">
+                             <ul class="sub sub-sub">
                               <li><a href="../forms/addForm.html">Add Form</a></li>
                               <li><a href="../forms/viewFormRevision.html">View Revision</a></li>
                               <li><a href="../forms/viewFormDetails.html">View Forms</a></li>
@@ -224,32 +224,32 @@
                   </div>
                   <div class="box-content">
                       <div class="form-group">
-                        <label class="col-sm-2 control-label">ID</label>
-                        <div class="col-sm-2"><b>EMP1111</b></div>
+                        <label class="col-sm-2 control-label"><b>ID</b></label>
+                        <div class="col-sm-2">EMP1111</div>
                         <div class="col-sm-2"></div>
-                        <label class="col-sm-2 control-label">Name</label>
+                        <label class="col-sm-2 control-label"><b>Name</b></label>
                         <div class="col-sm-2">
-                          <b>Willamson</b>
+                          Willamson
                         </div>
                         <div class="col-sm-2"></div>
                       </div>
                       <div class="form-group">
-                        <label class="col-sm-2 control-label">Job Title</label>
-                        <div class="col-sm-2"><b>Job Title 1</b></div>
+                        <label class="col-sm-2 control-label"><b>Job Title</b></label>
+                        <div class="col-sm-2">Job Title 1</div>
                         <div class="col-sm-2"></div>
-                        <label class="col-sm-2 control-label">Date Hired</label>
+                        <label class="col-sm-2 control-label"><b>Date Hired</b></label>
                         <div class="col-sm-2">
-                          <b>09/16/2013</b>
+                          09/16/2013
                         </div>
                         <div class="col-sm-2"></div>
                       </div>
                       <div class="form-group">
-                        <label class="col-sm-2 control-label">Attachments</label>
-                        <div class="col-sm-2"><b><a href="#">MyResume.doc</a></b></div>
+                        <label class="col-sm-2 control-label"><b>Attachments</b></label>
+                        <div class="col-sm-2"><a href="#">MyResume.doc</a></div>
                         <div class="col-sm-2"></div>
-                        <label class="col-sm-2 control-label">Working As</label>
+                        <label class="col-sm-2 control-label"><b>Working As</b></label>
                         <div class="col-sm-2">
-                          <b>Process Owner</b><br><b>Document Control</b>
+                          Process Owner<br>Document Control
                         </div>
                         <div class="col-sm-2"></div>
                       </div>
@@ -260,76 +260,76 @@
           <div class="form-panel">
             <div class="box-content">
                 <div class="form-group">
-                  <label class="col-sm-2 control-label">Name</label>
+                  <label class="col-sm-2 control-label"><b>Name</b></label>
                   <div class="col-sm-2">
-                    <b>Willamson</b>
+                    Willamson
                   </div>
                   <div class="col-sm-2"></div>
-                   <label class="col-sm-2 control-label">Date Hired</label>
+                   <label class="col-sm-2 control-label"><b>Date Hired</b></label>
                   <div class="col-sm-2">
-                    <b>09/16/2013</b>
+                    09/16/2013
                   </div>
                   <div class="col-sm-2"></div>
                 </div>
 
                 <div class="form-group">
-            <label class="col-sm-2 control-label">Job Title</label>
+            <label class="col-sm-2 control-label"><b>Job Title</b></label>
             <div class="col-sm-2">
-              <b>Job Title 1</b>
+              Job Title 1
             </div>
             <div class="col-sm-2"></div>
-             <label class="col-sm-2 control-label">List of functions needes</label>
+             <label class="col-sm-2 control-label"><b>List of functions needes</b></label>
                   <div class="col-sm-2">
-                    <b>Calibration</b>
+                    Calibration
                   </div>
                   <div class="col-sm-2"></div>
           </div>
           <div class="form-group">
-            <label class="col-sm-2 control-label">Documented In</label>
+            <label class="col-sm-2 control-label"><b>Documented In</b></label>
             <div class="col-sm-2">
-              <b>Associate Name1</b>
+              Associate Name1
             </div>
             <div class="col-sm-2"></div>
-             <label class="col-sm-2 control-label">Qualified By</label>
+             <label class="col-sm-2 control-label"><b>Qualified By</b></label>
                   <div class="col-sm-2">
-                    <b>Training</b>
+                    Training
                   </div>
                   <div class="col-sm-2"></div>
           </div>  
           <div class="form-group">
-                  <label class="col-sm-2 control-label">Type of Training</label>
+                  <label class="col-sm-2 control-label"><b>Type of Training</b></label>
                   <div class="col-sm-2">
-                    <b>Hands On</b>
+                    Hands On
                   </div>
                   <div class="col-sm-2"></div>
-                   <label class="col-sm-2 control-label">Trainer</label>
+                   <label class="col-sm-2 control-label"><b>Trainer</b></label>
                   <div class="col-sm-2">
-                    <b>Nilise</b>
+                    Nilise
                   </div>
                   <div class="col-sm-2"></div>
                 </div>
 
                 <div class="form-group">
-            <label class="col-sm-2 control-label">Training Due Date</label>
+            <label class="col-sm-2 control-label"><b>Training Due Date</b></label>
             <div class="col-sm-2">
-              <b>10/20/2015</b>
+              10/20/2015
             </div>
             <div class="col-sm-2"></div>
-             <label class="col-sm-2 control-label">Training Completion Date</label>
+             <label class="col-sm-2 control-label"><b>Training Completion Date</b></label>
                   <div class="col-sm-2">
-                    <b>06/04/2015</b>
+                    06/04/2015
                   </div>
                   <div class="col-sm-2"></div>
           </div>
           <div class="form-group">
-            <label class="col-sm-2 control-label">Training Effectiveness Notes</label>
+            <label class="col-sm-2 control-label"><b>Training Effectiveness Notes</b></label>
             <div class="col-sm-2">
-              <b>Associate Name1</b>
+              Associate Name1
             </div>
             <div class="col-sm-2"></div>
-             <label class="col-sm-2 control-label">Training Effectivenesss Review Due Date</label>
+             <label class="col-sm-2 control-label"><b>Training Effectivenesss Review Due Date</b></label>
                   <div class="col-sm-2">
-                    <b>06/04/2015</b>
+                    06/04/2015
                   </div>
                   <div class="col-sm-2"></div>
           </div>  
