--- a/InternalAudit/editInternalAudit.html
+++ b/InternalAudit/editInternalAudit.html
@@ -124,7 +124,7 @@
                                <i class="fa fa-plus-square"></i>
                                <span>Document</span>
                             </a>
-                             <ul class="sub">
+                             <ul class="sub sub-sub">
                               <li><a href="../document/addDocument.html">Add Document</a></li>
                               <li><a href="../document/viewDocumentRevision.html">View Revision</a></li>
                               <li><a href="../document/viewDocumentDetails.html">View Documents</a></li>
@@ -135,7 +135,7 @@
                                <i class="fa fa-plus-square"></i>
                                <span>Forms/Records</span>
                             </a>
-                             <ul class="sub">
+                             <ul class="sub sub-sub">
                               <li><a href="../forms/addForm.html">Add Form</a></li>
                               <li><a href="../forms/viewFormRevision.html">View Revision</a></li>
                               <li><a href="../forms/viewFormDetails.html">View Forms</a></li>
@@ -224,18 +224,18 @@
 				<form class="form-horizontal style-form" role="form">
 					<div class="form-group">
 						<label class="col-sm-2 control-label">Audit ID </label>
-						<div class="col-sm-4">	
+						<div class="col-sm-3">	
 							<input type="text" class="form-control" placeholder="" readonly="true" value="IA-1032">
 						</div>
-						<label class="col-sm-2 control-label">Auditor Notes</label>
-						<div class="col-sm-4">
+						<div class="col-sm-1"></div><label class="col-sm-2 control-label">Auditor Notes</label>
+						<div class="col-sm-3">
 							<textarea rows="3" class="form-control">Something comes here</textarea> 
 						</div>
 					</div>
 
 					<div class="form-group">
 						<label class="col-sm-2 control-label">Process </label>
-						<div class="col-sm-4">
+						<div class="col-sm-3">
 							<select class="form-control" disabled>
                 <option vlaue="">- Select - </option>
                 <option value="1">Account</option>
@@ -245,8 +245,8 @@
                 <option value="5">Process</option>
               </select>
 						</div>
-						<label class="col-sm-2 control-label">Finding</label>
-						<div class="col-sm-4">
+						<div class="col-sm-1"></div><label class="col-sm-2 control-label">Finding</label>
+						<div class="col-sm-3">
 							<select class="form-control">
 								<option value+"">- Select -</option>
                 <option value="1">Ok</option>
@@ -259,7 +259,7 @@
 
 					<div class="form-group">
 						<label class="col-sm-2 control-label">Auditee Name</label>
-						<div class="col-sm-4">
+						<div class="col-sm-3">
 						<select class="form-control" disabled>
                 <option value+"">- Select -</option>
                 <option value="1">Andrewson</option>
@@ -267,31 +267,31 @@
                 <option value="3">Jhonson</option>
               </select>
 						</div>
-						<label class="col-sm-2 control-label">Completion Date</label>
-						<div class="col-sm-4">
-            <input type="text" id="completionDate" class="form-control" placeholder="date picker" value="08/08/2015">
+						<div class="col-sm-1"></div><label class="col-sm-2 control-label">Completion Date</label>
+						<div class="col-sm-3">
+            <input type="text" id="completionDate" class="form-control" placeholder="Select Date" value="08/08/2015">
             </div>
           </div>
 					<div class="form-group">
 						<label class="col-sm-2 control-label">Audit Start Date</label>
-            <div class="col-sm-4">
-           <input type="text" id="auditStartDate" class="form-control" placeholder="date picker"  value="08/08/2015" disabled>
+            <div class="col-sm-3">
+           <input type="text" id="auditStartDate" class="form-control" placeholder="Select Date"  value="08/08/2015" disabled>
             </div>
-							<label class="col-sm-2 control-label">Auditor's Initials</label>
-							<div class="col-sm-4">
+							<div class="col-sm-1"></div><label class="col-sm-2 control-label">Auditor's Initials</label>
+							<div class="col-sm-3">
                 <input type="text" class="form-control" value="K">
 							</div>
 					</div>
 
 					<div class="form-group">
 							<label class="col-sm-2 control-label">Audit Due Date</label>
-							<div class="col-sm-4">
-								 <input type="text" id="auditDueDate" class="form-control" placeholder="date picker"  value="08/08/2015" disabled/>
+							<div class="col-sm-3">
+								 <input type="text" id="auditDueDate" class="form-control" placeholder="Select Date"  value="08/08/2015" disabled/>
 						 </div>
 					</div>
             <div class="form-group">
               <label class="col-sm-2 control-label">Auditor</label>
-              <div class="col-sm-4">
+              <div class="col-sm-3">
                  <select class="form-control" disabled>
                   <option value="">- Select -</option>
                   <option value="1">Name1</option>
