--- a/InternalAudit/internalAuditReport.html
+++ b/InternalAudit/internalAuditReport.html
@@ -125,7 +125,7 @@
                                <i class="fa fa-plus-square"></i>
                                <span>Document</span>
                             </a>
-                             <ul class="sub">
+                             <ul class="sub sub-sub">
                               <li><a href="../document/addDocument.html">Add Document</a></li>
                               <li><a href="../document/viewDocumentRevision.html">View Revision</a></li>
                               <li><a href="../document/viewDocumentDetails.html">View Documents</a></li>
@@ -136,7 +136,7 @@
                                <i class="fa fa-plus-square"></i>
                                <span>Forms/Records</span>
                             </a>
-                             <ul class="sub">
+                             <ul class="sub sub-sub">
                               <li><a href="../forms/addForm.html">Add Form</a></li>
                               <li><a href="../forms/viewFormRevision.html">View Revision</a></li>
                               <li><a href="../forms/viewFormDetails.html">View Forms</a></li>
@@ -242,7 +242,7 @@
 						<div class="col-sm-2"></div>
 						<label class="col-sm-3 control-label">Start Date </label>
 						<div class="col-sm-4">
-						    <input type="text" class="form-control date" id="startDate" placeholder="Date picker">
+						    <input type="text" class="form-control date" id="startDate" placeholder="Select Date">
 						</div>
 						<div class="col-sm-3"></div>
 					</div>
@@ -250,7 +250,7 @@
             <div class="col-sm-2"></div>
             <label class="col-sm-3 control-label">End Date </label>
             <div class="col-sm-4">
-                <input type="text" class="form-control date" id="endDate" placeholder="Date picker">
+                <input type="text" class="form-control date" id="endDate" placeholder="Select Date">
             </div>
             <div class="col-sm-3"></div>
           </div>
