--- a/InternalAudit/listInternalAudit.html
+++ b/InternalAudit/listInternalAudit.html
@@ -119,7 +119,7 @@
                                <i class="fa fa-plus-square"></i>
                                <span>Document</span>
                             </a>
-                             <ul class="sub">
+                             <ul class="sub sub-sub">
                               <li><a href="../document/addDocument.html">Add Document</a></li>
                               <li><a href="../document/viewDocumentRevision.html">View Revision</a></li>
                               <li><a href="../document/viewDocumentDetails.html">View Documents</a></li>
@@ -130,7 +130,7 @@
                                <i class="fa fa-plus-square"></i>
                                <span>Forms/Records</span>
                             </a>
-                             <ul class="sub">
+                             <ul class="sub sub-sub">
                               <li><a href="../forms/addForm.html">Add Form</a></li>
                               <li><a href="../forms/viewFormRevision.html">View Revision</a></li>
                               <li><a href="../forms/viewFormDetails.html">View Forms</a></li>
@@ -218,64 +218,64 @@
       <div class="box-content">
         <form class="form-horizontal" role="form" id="ow-summary">
           <div class="form-group">
-            <label class="col-sm-2 control-label">Audit ID</label>
-            <div class="col-sm-2"><b>IA-1111</b></div>
+            <label class="col-sm-2 control-label"><b>Audit ID</b></label>
+            <div class="col-sm-2">IA-1111</div>
             <div class="col-sm-2"></div>
-            <label class="col-sm-2 control-label">Auditor Notes</label>
+            <label class="col-sm-2 control-label"><b>Auditor Notes</b></label>
             <div class="col-sm-2">
-              <b>Aukkkkditor notes </b>
+              Aukkkkditor notes 
             </div>
             <div class="col-sm-2"></div>
           </div>
 
           <div class="form-group">
-            <label class="col-sm-2 control-label">Process</label>
+            <label class="col-sm-2 control-label"><b>Process</b></label>
             <div class="col-sm-2">
 
-              <b>Sample Process1</b>
+              Sample Process1
             </div>
             <div class="col-sm-2"></div>
-            <label class="col-sm-2 control-label">Finding</label>
+            <label class="col-sm-2 control-label"><b>Finding</b></label>
             <div class="col-sm-2">
-              <b>nonconformance</b>
+              nonconformance
             </div>
             <div class="col-sm-2"></div>
           </div>
           <div class="form-group">
-                  <label class="col-sm-2 control-label">Auditee Name</label>
+                  <label class="col-sm-2 control-label"><b>Auditee Name</b></label>
                   <div class="col-sm-2">
-                    <b>Nellson</b>
+                    Nellson
                   </div>
                   <div class="col-sm-2"></div>
-                  <label for="date_example" class="col-sm-2 control-label">Completion Date</label>
+                  <label for="date_example" class="col-sm-2 control-label"><b>Completion Date</b></label>
                   <div class="col-sm-2">
-                    <b>08/08/2015</b>
+                    08/08/2015
                   </div>
                   <div class="col-sm-2"></div>
                 </div>
 
                 <div class="form-group">
-            <label class="col-sm-2 control-label">Audit Start Date</label>
+            <label class="col-sm-2 control-label"><b>Audit Start Date</b></label>
             <div class="col-sm-2">
-              <b>09/08/2015</b>
+              09/08/2015
             </div>
             <div class="col-sm-2"></div>
-            <label class="col-sm-2 control-label">Auditor's Initials</label>
+            <label class="col-sm-2 control-label"><b>Auditor's Initials</b></label>
             <div class="col-sm-2">
-              <b>Yes</b>
+              Yes
             </div>
             <div class="col-sm-2"></div>
           </div>
           <div class="form-group">
-            <label class="col-sm-2 control-label">Audit Due Date</label>
+            <label class="col-sm-2 control-label"><b>Audit Due Date</b></label>
             <div class="col-sm-2">
-              <b>07/29/2015</b>
+              07/29/2015
             </div>
           </div>  
             <div class="form-group">
-            <label class="col-sm-2 control-label">Auditor</label>
+            <label class="col-sm-2 control-label"><b>Auditor</b></label>
             <div class="col-sm-2">
-              <b>Jhonson</b>
+              Jhonson
             </div>
           </div>  
             <div class="form-group">
