--- a/Maintenance/listMaintenanceRevision.html
+++ b/Maintenance/listMaintenanceRevision.html
@@ -124,7 +124,7 @@
                                <i class="fa fa-plus-square"></i>
                                <span>Document</span>
                             </a>
-                             <ul class="sub">
+                             <ul class="sub sub-sub">
                               <li><a href="../document/addDocument.html">Add Document</a></li>
                               <li><a href="../document/viewDocumentRevision.html">View Revision</a></li>
                               <li><a href="../document/viewDocumentDetails.html">View Documents</a></li>
@@ -135,7 +135,7 @@
                                <i class="fa fa-plus-square"></i>
                                <span>Forms/Records</span>
                             </a>
-                             <ul class="sub">
+                             <ul class="sub sub-sub">
                               <li><a href="../forms/addForm.html">Add Form</a></li>
                               <li><a href="../forms/viewFormRevision.html">View Revision</a></li>
                               <li><a href="../forms/viewFormDetails.html">View Forms</a></li>
@@ -224,58 +224,58 @@
 			<div class="box-content">
           <form class="form-horizontal" role="form" id="ow-summary">
                 <div class="form-group">
-                  <label class="col-sm-2 control-label">Equipment ID</label>
+                  <label class="col-sm-2 control-label"><b>Equipment ID</b></label>
                   <div class="col-sm-2">
-                    <b>EQU989</b>
+                    EQU989
                   </div>
                   <div class="col-sm-2"></div>
-                  <label for="date_example" class="col-sm-2 control-label">Date Acquired</label>
+                  <label for="date_example" class="col-sm-2 control-label"><b>Date Acquired</b></label>
                   <div class="col-sm-2">
-                    <b>06/07/2015</b>
-                  </div>
-                  <div class="col-sm-2"></div>
-                </div>
-                 <div class="form-group">
-                  <label class="col-sm-2 control-label">Equipment Name</label>
-                  <div class="col-sm-2">
-                    <b>Mobile Phone</b>
-                  </div>
-                  <div class="col-sm-2"></div>
-                  <label for="date_example" class="col-sm-2 control-label">Equipment Status</label>
-                  <div class="col-sm-2">
-                    <b>Active</b>
+                    06/07/2015
                   </div>
                   <div class="col-sm-2"></div>
                 </div>
                  <div class="form-group">
-                  <label class="col-sm-2 control-label">Equipment Model</label>
+                  <label class="col-sm-2 control-label"><b>Equipment Name</b></label>
                   <div class="col-sm-2">
-                    <b>Asus</b>
+                    Mobile Phone
                   </div>
                   <div class="col-sm-2"></div>
-                  <label for="date_example" class="col-sm-2 control-label">Frequency of Maintenance</label>
+                  <label for="date_example" class="col-sm-2 control-label"><b>Equipment Status</b></label>
                   <div class="col-sm-2">
-                    <b>Weekly</b><br><b>Monthly</b>
+                    Active
+                  </div>
+                  <div class="col-sm-2"></div>
+                </div>
+                 <div class="form-group">
+                  <label class="col-sm-2 control-label"><b>Equipment Model</b></label>
+                  <div class="col-sm-2">
+                    Asus
+                  </div>
+                  <div class="col-sm-2"></div>
+                  <label for="date_example" class="col-sm-2 control-label"><b>Frequency of Maintenance</b></label>
+                  <div class="col-sm-2">
+                    Weekly<br>Monthly
                   </div>
                   <div class="col-sm-2"></div>
                 </div>
                 <div class="form-group">
-                  <label class="col-sm-2 control-label">Serial Number</label>
+                  <label class="col-sm-2 control-label"><b>Serial Number</b></label>
                   <div class="col-sm-2">
-                    <b>Zenphone 5</b>
+                    Zenphone 5
                   </div>
                   <div class="col-sm-2"></div>
-                  <label for="date_example" class="col-sm-2 control-label">External Document ? (Y/N)</label>
+                  <label for="date_example" class="col-sm-2 control-label"><b>External Document ? (Y/N)</b></label>
                   <div class="col-sm-2">
-                    <b>Yes</b>
+                    Yes
                   </div>
                   <div class="col-sm-2"></div>
                 </div>
                 <div class="form-group">
-                  <label class="col-sm-2 control-label">Instructions / Reference (optional)</label>
+                  <label class="col-sm-2 control-label"><b>Instructions / Reference (optional)</b></label>
                   <div class="col-sm-2">
-                    <b><a href="#">Sample.txt</a></b><br>
-                    <b>Something is Missing</b>
+                    <a href="#">Sample.txt</a><br>
+                    Something is Missing
                   </div>
                   <div class="col-sm-6"></div>
                 </div>
@@ -289,48 +289,48 @@
 						<div class="box-content">
 							<form class="form-horizontal" role="form" id="ow-summary">
 								<div class="form-group">
-									<label class="col-sm-2 control-label">Equipment ID</label>
+									<label class="col-sm-2 control-label"><b>Equipment ID</b></label>
 									<div class="col-sm-2">
-										<b>EQU989</b>
+										EQU989
 									</div>
 									<div class="col-sm-2"></div>
-									<label for="date_example" class="col-sm-2 control-label">Due Date</label>
+									<label for="date_example" class="col-sm-2 control-label"><b>Due Date</b></label>
 									<div class="col-sm-2">
-										<b>06/07/2015</b>
+										06/07/2015
 									</div>
 									<div class="col-sm-2"></div>
 								</div>
 
 								<div class="form-group">
-						<label class="col-sm-2 control-label">Type of Maintenance</label>
+						<label class="col-sm-2 control-label"><b>Type of Maintenance</b></label>
 						<div class="col-sm-2">
-							<b>Preventive</b>
+							Preventive
 						</div>
 						<div class="col-sm-2"></div>
-						<label class="col-sm-2 control-label">Completion Date</label>
+						<label class="col-sm-2 control-label"><b>Completion Date</b></label>
 						<div class="col-sm-2">
-							<b>08/20/2015</b>
-						</div>
-						<div class="col-sm-2"></div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-sm-2 control-label">Frequency of Maintenance</label>
-						<div class="col-sm-2">
-							<b>Monthly</b>
-						</div>
-						<div class="col-sm-2"></div>
-						<label class="col-sm-2 control-label">Completed By</label>
-						<div class="col-sm-2">
-							<b>Nellson</b>
+							08/20/2015
 						</div>
 						<div class="col-sm-2"></div>
 					</div>
 
 					<div class="form-group">
-						<label class="col-sm-2 control-label">Notes</label>
+						<label class="col-sm-2 control-label"><b>Frequency of Maintenance</b></label>
 						<div class="col-sm-2">
-							<b>Nothing</b>
+							Monthly
+						</div>
+						<div class="col-sm-2"></div>
+						<label class="col-sm-2 control-label"><b>Completed By</b></label>
+						<div class="col-sm-2">
+							Nellson
+						</div>
+						<div class="col-sm-2"></div>
+					</div>
+
+					<div class="form-group">
+						<label class="col-sm-2 control-label"><b>Notes</b></label>
+						<div class="col-sm-2">
+							Nothing</b>
 						</div>
 						<div class="col-sm-6"></div>
 					</div>
