--- a/ManagementReview/editManagementReview.html
+++ b/ManagementReview/editManagementReview.html
@@ -125,7 +125,7 @@
                                <i class="fa fa-plus-square"></i>
                                <span>Document</span>
                             </a>
-                             <ul class="sub">
+                             <ul class="sub sub-sub">
                               <li><a href="../document/addDocument.html">Add Document</a></li>
                               <li><a href="../document/viewDocumentRevision.html">View Revision</a></li>
                               <li><a href="../document/viewDocumentDetails.html">View Documents</a></li>
@@ -136,7 +136,7 @@
                                <i class="fa fa-plus-square"></i>
                                <span>Forms/Records</span>
                             </a>
-                             <ul class="sub">
+                             <ul class="sub sub-sub">
                               <li><a href="../forms/addForm.html">Add Form</a></li>
                               <li><a href="../forms/viewFormRevision.html">View Revision</a></li>
                               <li><a href="../forms/viewFormDetails.html">View Forms</a></li>
@@ -225,18 +225,18 @@
 				<form class="form-horizontal" role="form">
 					<div class="form-group">
 						<label class="col-sm-2 control-label">Review ID </label>
-						<div class="col-sm-4">
+						<div class="col-sm-3">
 							<input type="text" readonly="true" class="form-control" value="1029" placeholder=""/>
 						</div>
-						<label class="col-sm-2 control-label">Management Review Date</label>
-						<div class="col-sm-4">
+						<div class="col-sm-1"></div><label class="col-sm-2 control-label">Management Review Date</label>
+						<div class="col-sm-3">
               <input type="text" class="form-control" id="reviewDate" value="07/29/2015" placeholder="Date picker">
 						</div>
 					</div>
 
 					<div class="form-group">
 						<label class="col-sm-2 control-label">Attendee List</label>
-						<div class="col-sm-3">
+						<div class="col-sm-2">
 							 <select class="form-control" id="attendeeList" onchange="showJobtitle(this.value);">
                 <option value="">- Select -</option>
                 <option value="Name 1">Name 1</option>
@@ -249,8 +249,8 @@
             <div class="col-sm-1" >
             <button type="button" id="plus"  onclick="addAttendee();" class="btn btn-primary btn-xs" value="">Add</button>
             </div>
-						<label class="col-sm-2 control-label">Next Management Review By </label>
-						<div class="col-sm-4">
+						<div class="col-sm-1"></div><label class="col-sm-2 control-label">Next Management Review By </label>
+						<div class="col-sm-3">
 							<input type="text" class="form-control" value="Stella" placeholder="">
 						</div>
 					</div>
@@ -280,7 +280,7 @@
 							<form class="form-horizontal" role="form">
 								<div class="form-group">
 									<label class="col-sm-2 control-label">Category</label>
-									<div class="col-sm-4">
+									<div class="col-sm-3">
                       <select class="form-control">
                         <option value="">--Select--</option>
                                 <option value="ABCD">Audits</option>
@@ -290,59 +290,67 @@
                               <option value="PQR">Customer Satisfication</option>
                     </select>
 									</div>
-									<label class="col-sm-2 control-label">Report Link</label>
-									<div class="col-sm-4">
+									<div class="col-sm-1"></div><label class="col-sm-2 control-label">Report Link</label>
+									<div class="col-sm-3">
 									 <input type="text" class="form-control" value="www.qms.com" placeholder="www.example.com">
 									</div>
 								</div>
 
 								<div class="form-group">
 									<label class="col-sm-2 control-label">Assessment </label>
-									<div class="col-sm-4">
+									<div class="col-sm-3">
                       <textarea class="form-control" rows="3">Something</textarea>
 									</div>
-									<label class="col-sm-2 control-label">Action Due Date</label>
-									<div class="col-sm-4">
+									<div class="col-sm-1"></div><label class="col-sm-2 control-label">Action Due Date</label>
+									<div class="col-sm-3">
 										<input type="text" class="form-control" value="07/29/2015" id="dueDate" placeholder="Date picker">
 									</div>
 								</div>
 
 								<div class="form-group">
 									<label class="col-sm-2 control-label">Action Needed (Y/N)</label>
-									<div class="col-sm-4">
+									<div class="col-sm-3">
 										<div class="toggle-switch toggle-switch-primary">
-                      <label>
-                        <input type="checkbox" checked>
-                        <div class="toggle-switch-inner"></div>
-                        <div class="toggle-switch-switch"><i class="fa fa-check"></i></div>
-                      </label>
+                    <label>
+                    <input type="checkbox" id="actionNeededYN" onchange="checkForIcon(this.id);" checked>
+                    <div class="toggle-switch-inner"></div>
+                    <div class="toggle-switch-switch">
+                       <span id="actionNeededYN_times"><i class="fa fa-check"></i></span>
+                      <span id="actionNeededYN_check" style="display:none;"><i class="fa fa-times"></i></span>
+                     
                     </div>
+                 </label>
+                  </div>
 									</div>
-                    <label class="col-sm-2 control-label">Completion Date</label>
-                  <div class="col-sm-4">
+                    <div class="col-sm-1"></div><label class="col-sm-2 control-label">Completion Date</label>
+                  <div class="col-sm-3">
                     <input type="text" class="form-control" value="07/28/2015" id="completionDate" placeholder="Date picker">
                   </div>
 							</div>
               <div class="form-group">
                   <label class="col-sm-2 control-label">Action Detail</label>
-                  <div class="col-sm-4">
+                  <div class="col-sm-3">
                     <input type="text" class="form-control" value="nedded" placeholder=""/>
                   </div>
-                  <label class="col-sm-2 control-label">Responsibility </label>
-                  <div class="col-sm-4">
+                  <div class="col-sm-1"></div><label class="col-sm-2 control-label">Responsibility </label>
+                  <div class="col-sm-3">
                     <input type="text" class="form-control" value="myself" placeholder="">
                   </div>
               </div>
               <div class="form-group">
                   <label class="col-sm-2 control-label">Continuous Improvement Project (Y/N)</label>
-                  <div class="col-sm-4">
-                    <div class="toggle-switch toggle-switch-primary">
-                      <label>
-                        <input type="checkbox" checked>
-                        <div class="toggle-switch-inner"></div>
-                        <div class="toggle-switch-switch"><i class="fa fa-check"></i></div>
-                      </label>
+                  <div class="col-sm-3">
+                    <div class="toggle-switch toggle-switch-primary ">
+                    <label>
+                    <input type="checkbox" id="continuousYN" onchange="checkForIcon(this.id);" checked>
+                    <div class="toggle-switch-inner"></div>
+                    <div class="toggle-switch-switch">
+                       <span id="continuousYN_times"><i class="fa fa-check"></i></span>
+                      <span id="continuousYN_check" style="display:none;"><i class="fa fa-times"></i></span>
+                     
                     </div>
+                 </label>
+                  </div>
                   </div>
                   <div class="col-sm-6"></div>
               </div>
