--- a/ManagementReview/listManagementReview.html
+++ b/ManagementReview/listManagementReview.html
@@ -124,7 +124,7 @@
                                <i class="fa fa-plus-square"></i>
                                <span>Document</span>
                             </a>
-                             <ul class="sub">
+                             <ul class="sub sub-sub">
                               <li><a href="../document/addDocument.html">Add Document</a></li>
                               <li><a href="../document/viewDocumentRevision.html">View Revision</a></li>
                               <li><a href="../document/viewDocumentDetails.html">View Documents</a></li>
@@ -135,7 +135,7 @@
                                <i class="fa fa-plus-square"></i>
                                <span>Forms/Records</span>
                             </a>
-                             <ul class="sub">
+                             <ul class="sub sub-sub">
                               <li><a href="../forms/addForm.html">Add Form</a></li>
                               <li><a href="../forms/viewFormRevision.html">View Revision</a></li>
                               <li><a href="../forms/viewFormDetails.html">View Forms</a></li>
@@ -223,26 +223,26 @@
 			<div class="box-content">
 				<form class="form-horizontal" role="form" id="ow-summary">
 					<div class="form-group">
-						<label class="col-sm-2 control-label">Review ID</label>
-						<div class="col-sm-2"><b>1111</b></div>
+						<label class="col-sm-2 control-label"><b>Review ID</b></label>
+						<div class="col-sm-2">1111</div>
 						<div class="col-sm-2"></div>
-						<label class="col-sm-2 control-label">Management Review Date </label>
+						<label class="col-sm-2 control-label"><b>Management Review Date </b></label>
 						<div class="col-sm-2">
-							<b>07/29/2015</b>
+							07/29/2015
 						</div>
 						<div class="col-sm-2"></div>
 					</div>
 
 					<div class="form-group">
-						<label class="col-sm-2 control-label">Attendee List</label>
+						<label class="col-sm-2 control-label"><b>Attendee List</b></label>
 						<div class="col-sm-2">
 
-							<b> <a href="#" onclick="showAttendees()">View Attendee List with Job Titles</a></b>
+							 <a href="#" onclick="showAttendees()">View Attendee List with Job Titles</a>
 						</div>
 						<div class="col-sm-2"></div>
-						<label class="col-sm-2 control-label">Next Management Review By</label>
+						<label class="col-sm-2 control-label"><b>Next Management Review By</b></label>
 						<div class="col-sm-2">
-							<b>Sample Process3</b>
+							Sample Process3
 						</div>
 						<div class="col-sm-2"></div>
 					</div>
@@ -256,59 +256,59 @@
 						<div class="box-content">
 							<form class="form-horizontal" role="form" id="ow-summary">
 								<div class="form-group">
-									<label class="col-sm-2 control-label">Category</label>
+									<label class="col-sm-2 control-label"><b>Category</b></label>
 									<div class="col-sm-2">
-										<b>Audits</b>
+										Audits
 									</div>
 									<div class="col-sm-2"></div>
-									<label for="date_example" class="col-sm-2 control-label">Report Link</label>
+									<label for="date_example" class="col-sm-2 control-label">Report Link</b></label>
 									<div class="col-sm-2">
-										<b>www.QMS.com</b>
+										www.QMS.com
 									</div>
 									<div class="col-sm-2"></div>
 								</div>
 
 								<div class="form-group">
-						<label class="col-sm-2 control-label">Assessment</label>
+						<label class="col-sm-2 control-label"><b>Assessment</b></label>
 						<div class="col-sm-2">
-							<b>Something</b>
+							Something
 						</div>
 						<div class="col-sm-2"></div>
-						<label class="col-sm-2 control-label">Action Due Date</label>
+						<label class="col-sm-2 control-label"><b>Action Due Date</b></label>
 						<div class="col-sm-2">
-							<b>07/29/2015</b>
+							07/29/2015
 						</div>
 						<div class="col-sm-2"></div>
 					</div>
 					<div class="form-group">
-						<label class="col-sm-2 control-label">Action Needed (Y/N) </label>
+						<label class="col-sm-2 control-label"><b>Action Needed (Y/N) </b></label>
 						<div class="col-sm-2">
-							<b>Yes</b>
+							Yes
 						</div>
             <div class="col-sm-2"></div>
-            <label class="col-sm-2 control-label">Completion Date</label>
+            <label class="col-sm-2 control-label"><b>Completion Date</b></label>
             <div class="col-sm-2">
-              <b>07/29/2015</b>
+              07/29/2015
             </div>
             <div class="col-sm-2"></div>
 						
 					</div>	
             <div class="form-group">
-            <label class="col-sm-2 control-label">Action Detail</label>
+            <label class="col-sm-2 control-label"><b>Action Detail</b></label>
             <div class="col-sm-2">
-              <b>Needed</b>
+              Needed
             </div>
             <div class="col-sm-2"></div>
-            <label class="col-sm-2 control-label">Responsibility</label>
+            <label class="col-sm-2 control-label"><b>Responsibility</b></label>
             <div class="col-sm-2">
-              <b>Myself</b>
+              Myself
             </div>
             <div class="col-sm-2"></div>
           </div>  
             <div class="form-group">
-            <label class="col-sm-2 control-label">Continuous Improvement Project (Y/N) </label>
+            <label class="col-sm-2 control-label"><b>Continuous Improvement Project (Y/N) </b></label>
             <div class="col-sm-2">
-              <b>No</b>
+              No
             </div>
             <div class="col-sm-8"></div>
           </div> 
