--- a/NonConformance/listNonConformance.html
+++ b/NonConformance/listNonConformance.html
@@ -119,7 +119,7 @@
                                <i class="fa fa-plus-square"></i>
                                <span>Document</span>
                             </a>
-                             <ul class="sub">
+                             <ul class="sub sub-sub">
                               <li><a href="../document/addDocument.html">Add Document</a></li>
                               <li><a href="../document/viewDocumentRevision.html">View Revision</a></li>
                               <li><a href="../document/viewDocumentDetails.html">View Documents</a></li>
@@ -130,7 +130,7 @@
                                <i class="fa fa-plus-square"></i>
                                <span>Forms/Records</span>
                             </a>
-                             <ul class="sub">
+                             <ul class="sub sub-sub">
                               <li><a href="../forms/addForm.html">Add Form</a></li>
                               <li><a href="../forms/viewFormRevision.html">View Revision</a></li>
                               <li><a href="../forms/viewFormDetails.html">View Forms</a></li>
@@ -218,102 +218,102 @@
       <div class="box-content">
         <form class="form-horizontal" role="form" id="ow-summary">
           <div class="form-group">
-            <label class="col-sm-2 control-label">NonConformance (NC) ID</label>
-            <div class="col-sm-2"><b>NC1111</b></div>
+            <label class="col-sm-2 control-label"><b>NonConformance (NC) ID</b></label>
+            <div class="col-sm-2">NC1111</div>
             <div class="col-sm-2"></div>
-            <label class="col-sm-2 control-label">Product ID</label>
+            <label class="col-sm-2 control-label"><b>Product ID</b></label>
             <div class="col-sm-2">
-              <b>ID 1</b>
+              ID 1
             </div>
             <div class="col-sm-2"></div>
           </div>
 
           <div class="form-group">
-            <label class="col-sm-2 control-label">Source of NC</label>
+            <label class="col-sm-2 control-label"><b>Source of NC</b></label>
             <div class="col-sm-2">
 
-              <b>Internal Audit</b>
+              Internal Audit
             </div>
             <div class="col-sm-2"></div>
-            <label class="col-sm-2 control-label">External ID</label>
+            <label class="col-sm-2 control-label"><b>External ID</b></label>
             <div class="col-sm-2">
-              <b>EXtenal 123</b>
+              EXtenal 123
             </div>
             <div class="col-sm-2"></div>
           </div>
           <div class="form-group">
-                  <label class="col-sm-2 control-label">Type Of NC</label>
+                  <label class="col-sm-2 control-label"><b>Type Of NC</b></label>
                   <div class="col-sm-2">
-                    <b>Product Quality</b>
+                    Product Quality
                   </div>
                   <div class="col-sm-2"></div>
-                  <label for="date_example" class="col-sm-2 control-label">Quantity Suspect</label>
+                  <label for="date_example" class="col-sm-2 control-label"><b>Quantity Suspect</b></label>
                   <div class="col-sm-2">
-                    <b>suspected Quality</b>
+                    suspected Quality
                   </div>
                   <div class="col-sm-2"></div>
                 </div>
 
                 <div class="form-group">
-            <label class="col-sm-2 control-label">Nature of NC</label>
+            <label class="col-sm-2 control-label"><b>Nature of NC</b></label>
             <div class="col-sm-2">
-              <b>Something</b>
+              Something
             </div>
             <div class="col-sm-2"></div>
-            <label class="col-sm-2 control-label">Disposition Required (Y/N) ?</label>
+            <label class="col-sm-2 control-label"><b>Disposition Required (Y/N) ?</b></label>
             <div class="col-sm-2">
-              <b>Yes</b>
+              Yes
             </div>
             <div class="col-sm-2"></div>
           </div>
           <div class="form-group">
-            <label class="col-sm-2 control-label">Date Found</label>
+            <label class="col-sm-2 control-label"><b>Date Found</b></label>
             <div class="col-sm-2">
-              <b>07/29/2015</b>
+              07/29/2015
             </div>
             <div class="col-sm-2"></div>
-            <label class="col-sm-2 control-label">Disposition</label>
+            <label class="col-sm-2 control-label"><b>Disposition</b></label>
             <div class="col-sm-2">
-              <b>Repair 2 No's</b><br>
-              <b>Discard 4 No's</b><br>
-              <b>Keep as is 1 No's</b><br>
+              Repair 2 No's<br>
+              Discard 4 No's<br>
+              Keep as is 1 No's<br>
             </div>
             <div class="col-sm-2"></div>
             
           </div>  
             <div class="form-group">
-            <label class="col-sm-2 control-label">Reported By</label>
+            <label class="col-sm-2 control-label"><b>Reported By</b></label>
             <div class="col-sm-2">
-              <b>Jhonson</b>
+              Jhonson
             </div>
             <div class="col-sm-2"></div>
-            <label class="col-sm-2 control-label">Disposition Complete Date</label>
+            <label class="col-sm-2 control-label"><b>Disposition Complete Date</b></label>
             <div class="col-sm-2">
-              <b>08/04/2015</b>
+              08/04/2015
             </div>
             <div class="col-sm-2"></div>
           </div>  
             <div class="form-group">
-            <label class="col-sm-2 control-label">Temporary Action</label>
+            <label class="col-sm-2 control-label"><b>Temporary Action</b></label>
             <div class="col-sm-2">
-              <b>No</b>
+              No
             </div>  
             <div class="col-sm-2"></div>
-            <label class="col-sm-2 control-label">Disposition Responsibility</label>
+            <label class="col-sm-2 control-label"><b>Disposition Responsibility</b></label>
             <div class="col-sm-2">
-              <b>Nellson</b>
+              Nellson
             </div>
             <div class="col-sm-2"></div>
             </div>
             <div class="form-group">
-            <label class="col-sm-2 control-label">Corrective Action Required (Y/N) ?</label>
+            <label class="col-sm-2 control-label"><b>Corrective Action Required (Y/N) ?</b></label>
             <div class="col-sm-2">
-              <b>No</b>
+              No
             </div>  
             <div class="col-sm-2"></div>
-            <label class="col-sm-2 control-label">Cost of NC</label>
+            <label class="col-sm-2 control-label"><b>Cost of NC</b></label>
             <div class="col-sm-2">
-              <b>40</b>
+              40
             </div>
             <div class="col-sm-2"></div>
             </div>
