--- a/SupplierPerformance/addSupplierPerformance.html
+++ b/SupplierPerformance/addSupplierPerformance.html
@@ -125,7 +125,7 @@
                                <i class="fa fa-plus-square"></i>
                                <span>Document</span>
                             </a>
-                             <ul class="sub">
+                             <ul class="sub sub-sub">
                               <li><a href="../document/addDocument.html">Add Document</a></li>
                               <li><a href="../document/viewDocumentRevision.html">View Revision</a></li>
                               <li><a href="../document/viewDocumentDetails.html">View Documents</a></li>
@@ -136,7 +136,7 @@
                                <i class="fa fa-plus-square"></i>
                                <span>Forms/Records</span>
                             </a>
-                             <ul class="sub">
+                             <ul class="sub sub-sub">
                               <li><a href="../forms/addForm.html">Add Form</a></li>
                               <li><a href="../forms/viewFormRevision.html">View Revision</a></li>
                               <li><a href="../forms/viewFormDetails.html">View Forms</a></li>
@@ -224,83 +224,83 @@
 			<div class="box-content">
 					<div class="form-group">
 						<label class="col-sm-2 control-label">Supplier ID</label>
-						<div class="col-sm-4">
+						<div class="col-sm-3">
 							<input type="text" readonly="true" class="form-control" value="C1033" placeholder=""/>
 						</div>
-						<label class="col-sm-2 control-label">Website</label>
-						<div class="col-sm-4">
+						<div class="col-sm-1"></div><label class="col-sm-2 control-label">Website</label>
+						<div class="col-sm-3">
               <input type="text" class="form-control" id="" placeholder="www.example.com">
 						</div>
 					</div>
 
 					<div class="form-group">
 						<label class="col-sm-2 control-label">Supplier Name</label>
-						<div class="col-sm-4">
+						<div class="col-sm-3">
 							 <input type="text" class="form-control" id="">
 						</div>
-						<label class="col-sm-2 control-label">Certified to</label>
-						<div class="col-sm-4">
+						<div class="col-sm-1"></div><label class="col-sm-2 control-label">Certified to</label>
+						<div class="col-sm-3">
 							<input type="text" class="form-control" placeholder="">
 						</div>
 					</div>
           <div class="form-group">
             <label class="col-sm-2 control-label">Category</label>
-            <div class="col-sm-4">
+            <div class="col-sm-3">
                <input type="text" class="form-control" id="">
             </div>
-            <label class="col-sm-2 control-label">Contact name</label>
-            <div class="col-sm-4">
+            <div class="col-sm-1"></div><label class="col-sm-2 control-label">Contact name</label>
+            <div class="col-sm-3">
               <input type="text" class="form-control" placeholder="">
             </div>
           </div>
 					<div class="form-group">
 						<label class="col-sm-2 control-label">Address</label>
-						<div class="col-sm-4" >
+						<div class="col-sm-3" >
 							 <textarea class="form-control" rows="3">  </textarea>
 						</div>
-          <label class="col-sm-2 control-label">Title</label>
-            <div class="col-sm-4">
+          <div class="col-sm-1"></div><label class="col-sm-2 control-label">Title</label>
+            <div class="col-sm-3">
               <input type="text" class="form-control" placeholder="">
             </div>
 					</div>
             <div class="form-group">
             <label class="col-sm-2 control-label">City </label>
-            <div class="col-sm-4" >
+            <div class="col-sm-3" >
                <input type="text" class="form-control">
             </div>
-          <label class="col-sm-2 control-label">Phone</label>
-            <div class="col-sm-4">
+          <div class="col-sm-1"></div><label class="col-sm-2 control-label">Phone</label>
+            <div class="col-sm-3">
               <input type="text" class="form-control" placeholder="">
             </div>
           </div>
             <div class="form-group">
             <label class="col-sm-2 control-label">State </label>
-            <div class="col-sm-4" >
+            <div class="col-sm-3" >
                 <input type="text" class="form-control">
             </div>
-          <label class="col-sm-2 control-label">Fax </label>
-            <div class="col-sm-4">
+          <div class="col-sm-1"></div><label class="col-sm-2 control-label">Fax </label>
+            <div class="col-sm-3">
               <input type="text" class="form-control" placeholder="">
             </div>
           </div>
             <div class="form-group">
             <label class="col-sm-2 control-label">Country </label>
-            <div class="col-sm-4" >
+            <div class="col-sm-3" >
               <input type="text" class="form-control">
             </div>
-          <label class="col-sm-2 control-label">Email </label>
-            <div class="col-sm-4">
+          <div class="col-sm-1"></div><label class="col-sm-2 control-label">Email </label>
+            <div class="col-sm-3">
               <input type="text" class="form-control" placeholder="">
             </div>
           </div>
             <div class="form-group">
             <label class="col-sm-2 control-label">ZipCode</label>
-            <div class="col-sm-4" >
+            <div class="col-sm-3" >
                <input type="text" class="form-control">
             </div>
           </div>
 					<div class="form-group" id="hidebutton">
-						<div class="col-sm-7"></div>
+						<div class="col-sm-6"></div>
 						<div class="col-sm-3">					
 							<input type="button" value="Enter/Modify Performance Details" onclick="showchildsection();"class=" btn btn-primary">
 						</div>
@@ -319,18 +319,21 @@
 						<div class="box-content">
 								<div class="form-group">
 									<label class="col-sm-2 control-label">Receipt Date</label>
-									<div class="col-sm-4">
-                        <input type="text" class="form-control" id="receiptDate" placeholder="Date picker">
+									<div class="col-sm-3">
+                        <input type="text" class="form-control" id="receiptDate" placeholder="Select Date">
 									</div>
-                  <label class="col-sm-2 control-label">Request Corrective Action (Y/N)</label>
-            <div class="col-sm-4">
+                  <div class="col-sm-1"></div><label class="col-sm-2 control-label">Request Corrective Action (Y/N)</label>
+            <div class="col-sm-3">
               <div class="toggle-switch toggle-switch-primary">
-              <label>
-                <input type="checkbox">
+                <label>
+                <input type="checkbox" id="requestYN" onchange="checkForIcon(this.id); correctiveActionDueDateCheck(this.id);">
                 <div class="toggle-switch-inner"></div>
-                <div class="toggle-switch-switch"><i class="fa fa-check"></i></div>
-              </label>
-            </div>
+                <div class="toggle-switch-switch">
+                  <span id="requestYN_check"><i class="fa fa-times"></i></span>
+                  <span id="requestYN_times" style="display:none;"><i class="fa fa-check"></i></span>
+                </div>
+                 </label>
+              </div>
             </div>
 					 </div>
 
@@ -362,62 +365,65 @@
                         </label>
                     </div>
                   </div>
-                   <label class="col-sm-2 control-label">Deduction for Issue</label>
-                    <div class="col-sm-4" >
+                  <label class="col-sm-2 control-label">Deduction for Issue</label>
+                    <div class="col-sm-3" >
                        <input type="text" class="form-control" id="deductionIssue" disabled>
                     </div>
 						</div>
 
 								<div class="form-group">
                    <label class="col-sm-2 control-label">Quality</label>
-                    <div class="col-sm-4" >
+                    <div class="col-sm-3" >
                        <select class="form-control" id="qualityDrop" onChange="calculateDeductionIssue()" disabled>
                         <option value="20">Critical</option>
                         <option value="10">Moderate</option>
                         <option value="5">Minor</option>
                       </select> 
                     </div>
-									<label class="col-sm-2 control-label">Recorded by</label>
-									<div class="col-sm-4">
+									<div class="col-sm-1"></div><label class="col-sm-2 control-label">Recorded by</label>
+									<div class="col-sm-3">
 										<input type="text" class="form-control">
 									</div>
 							</div>
               <div class="form-group">
                   <label class="col-sm-2 control-label">Delivery</label>
-                  <div class="col-sm-4">
+                  <div class="col-sm-3">
                     <select name="delivery" class="form-control" id="deliveryDrop" onChange="calculateDeductionIssue()" disabled>
                       <option  value="10">Late 1 day</option>
                       <option value="20">Late 2+ day</option>
                        <option value="5">Early 2+ days</option>
                     </select>
                   </div>
-                  <label class="col-sm-2 control-label">Recording Date</label>
-                  <div class="col-sm-4">
-                    <input type="text" class="form-control" id="recordingDate">
+                  <div class="col-sm-1"></div><label class="col-sm-2 control-label">Recording Date</label>
+                  <div class="col-sm-3">
+                    <input type="text" class="form-control" id="recordingDate" placeholder="Select Date">
                   </div>
               </div>
               <div class="form-group">
                   <label class="col-sm-2 control-label">Customer Service</label>
-                  <div class="col-sm-4">
+                  <div class="col-sm-3">
                       <select class="form-control" id="customerServiceDrop" onChange="calculateDeductionIssue()" disabled>
                        <option  value="15">Critical Issue</option>
                        <option value="10">Moderate Issue</option>
                        <option value="5">Minor Issue</option>
                     </select>
                   </div>
-                  <div class="col-sm-6"></div>
+                   <div class="col-sm-1"></div><label class="col-sm-2 control-label"> Due Date for Corrective Action</label>
+                  <div class="col-sm-3">
+                    <input type="text" class="form-control" id="dueDateCorrectiveAction"  placeholder="Select Date" disabled>
+                  </div>
               </div>
               
               <div class="form-group">
                   <label class="col-sm-2 control-label">Problem Details</label>
-                  <div class="col-sm-4">
+                  <div class="col-sm-3">
                       <textarea class="form-control" rows="3"></textarea>
                   </div>
                   <div class="col-sm-6"></div>
               </div>
               <div class="form-group">
                   <label class="col-sm-2 control-label">Problem Found at</label>
-                  <div class="col-sm-4">
+                  <div class="col-sm-3">
                        <select name= "problem_found_at" id="problemFoundaAt" class="form-control" onChange="calculateDeductionIssue()" disabled>
                              <option  value="1">Receiving</option>
                              <option  value="1.5">In-process</option>
@@ -427,7 +433,7 @@
                   <div class="col-sm-6"></div>
               </div>
 							<div class="form-group" id="showbutton" style="display:none;">
-									<div class="col-sm-6"></div>
+									<div class="col-sm-5"></div>
 									<div class="col-sm-4">
 										<input type="button" value="Hide Enter/Modify Performance Details" onclick="hidechildsection();"class="btn btn-primary">
 									</div>
@@ -584,4 +590,37 @@
     calc.deductionIssue.value =""; 
   }
  }
+ function correctiveActionDueDateCheck(id){
+  var isChecked = document.getElementById(id).checked;
+  if (isChecked) {
+    document.getElementById('dueDateCorrectiveAction').disabled = false;
+      callEnableDueDate();
+  }else{
+    document.getElementById('dueDateCorrectiveAction').disabled = true;
+    document.getElementById('dueDateCorrectiveAction').value = "";
+  
+  }
+ }
+ function callEnableDueDate(){ 
+     $('#dueDateCorrectiveAction').datetimepicker({
+     pickTime : false
+  });
+   }
  </script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
