--- a/SupplierPerformance/listSupplierPerformance.html
+++ b/SupplierPerformance/listSupplierPerformance.html
@@ -124,7 +124,7 @@
                                <i class="fa fa-plus-square"></i>
                                <span>Document</span>
                             </a>
-                             <ul class="sub">
+                             <ul class="sub sub-sub">
                               <li><a href="../document/addDocument.html">Add Document</a></li>
                               <li><a href="../document/viewDocumentRevision.html">View Revision</a></li>
                               <li><a href="../document/viewDocumentDetails.html">View Documents</a></li>
@@ -135,7 +135,7 @@
                                <i class="fa fa-plus-square"></i>
                                <span>Forms/Records</span>
                             </a>
-                             <ul class="sub">
+                             <ul class="sub sub-sub">
                               <li><a href="../forms/addForm.html">Add Form</a></li>
                               <li><a href="../forms/viewFormRevision.html">View Revision</a></li>
                               <li><a href="../forms/viewFormDetails.html">View Forms</a></li>
@@ -223,96 +223,96 @@
 			<div class="box-content">
 				<form class="form-horizontal" role="form" id="ow-summary">
 					<div class="form-group">
-						<label class="col-sm-2 control-label">Supplier ID</label>
-						<div class="col-sm-2"><b>Sp1111</b></div>
+						<label class="col-sm-2 control-label"><b>Supplier ID</b></label>
+						<div class="col-sm-2">Sp1111</div>
 						<div class="col-sm-2"></div>
-						<label class="col-sm-2 control-label">Website</label>
+						<label class="col-sm-2 control-label"><b>Website</b></label>
 						<div class="col-sm-2">
-							<b>www.mySite.com</b>
+							www.mySite.com
 						</div>
 						<div class="col-sm-2"></div>
 					</div>
 
 					<div class="form-group">
-						<label class="col-sm-2 control-label">Supplier Name</label>
+						<label class="col-sm-2 control-label"><b>Supplier Name</b></label>
 						<div class="col-sm-2">
 
-							<b>Nellson</b>
+							Nellson
 						</div>
 						<div class="col-sm-2"></div>
-						<label class="col-sm-2 control-label">Certified to</label>
+						<label class="col-sm-2 control-label"><b>Certified to</b></label>
 						<div class="col-sm-2">
-							<b>Nelli</b>
+							Nelli
 						</div>
 						<div class="col-sm-2"></div>
 					</div>
           <div class="form-group">
-            <label class="col-sm-2 control-label">Category</label>
+            <label class="col-sm-2 control-label"><b>Category</b></label>
             <div class="col-sm-2">
-              <b>Category</b>
+              Category
             </div>
             <div class="col-sm-2"></div>
-             <label class="col-sm-2 control-label">Contact name</label>
+             <label class="col-sm-2 control-label"><b>Contact name</b></label>
             <div class="col-sm-2">
-              <b>QMS</b>
+              QMS
             </div>
             <div class="col-sm-2"></div>
           </div>
             <div class="form-group">
-            <label class="col-sm-2 control-label">Address</label>
+            <label class="col-sm-2 control-label"><b>Address</b></label>
             <div class="col-sm-2">
-              <b>2-444</b>
+              2-444
             </div>
             <div class="col-sm-2"></div>
-             <label class="col-sm-2 control-label">Title</label>
+             <label class="col-sm-2 control-label"><b>Title</b></label>
             <div class="col-sm-2">
-              <b>QMS</b>
-            </div>
-            <div class="col-sm-2"></div>
-          </div>
-          <div class="form-group">
-            <label class="col-sm-2 control-label">City</label>
-            <div class="col-sm-2">
-              <b>NewSquard</b>
-            </div>
-            <div class="col-sm-2"></div>
-            <label class="col-sm-2 control-label">Phone</label>
-            <div class="col-sm-2">
-              <b>01334-4443-22</b>
+              QMS
             </div>
             <div class="col-sm-2"></div>
           </div>
           <div class="form-group">
-            <label class="col-sm-2 control-label">State</label>
+            <label class="col-sm-2 control-label"><b>City</b></label>
+            <div class="col-sm-2">
+              NewSquard
+            </div>
+            <div class="col-sm-2"></div>
+            <label class="col-sm-2 control-label"><b>Phone</b></label>
+            <div class="col-sm-2">
+              01334-4443-22
+            </div>
+            <div class="col-sm-2"></div>
+          </div>
+          <div class="form-group">
+            <label class="col-sm-2 control-label"><b>State</b></label>
             <div class="col-sm-2">
 
-              <b>Ohio</b>
+              Ohio
             </div>
             <div class="col-sm-2"></div>
-            <label class="col-sm-2 control-label">Fax</label>
+            <label class="col-sm-2 control-label"><b>Fax</b></label>
             <div class="col-sm-2">
-              <b>003454</b>
-            </div>
-            <div class="col-sm-2"></div>
-          </div>
-          <div class="form-group">
-            <label class="col-sm-2 control-label">Country</label>
-            <div class="col-sm-2">
-
-              <b>USA</b>
-            </div>
-            <div class="col-sm-2"></div>
-            <label class="col-sm-2 control-label">Email</label>
-            <div class="col-sm-2">
-              <b>Nelli.gmail.com</b>
+              003454
             </div>
             <div class="col-sm-2"></div>
           </div>
           <div class="form-group">
-            <label class="col-sm-2 control-label">ZipCode</label>
+            <label class="col-sm-2 control-label"><b>Country</b></label>
             <div class="col-sm-2">
 
-              <b>OH935</b>
+              USA
+            </div>
+            <div class="col-sm-2"></div>
+            <label class="col-sm-2 control-label"><b>Email</b></label>
+            <div class="col-sm-2">
+              Nelli.gmail.com
+            </div>
+            <div class="col-sm-2"></div>
+          </div>
+          <div class="form-group">
+            <label class="col-sm-2 control-label"><b>ZipCode</b></label>
+            <div class="col-sm-2">
+
+              OH935
             </div>
             <div class="col-sm-2"></div>
           </div>
@@ -327,74 +327,74 @@
 						<div class="box-content">
 							<form class="form-horizontal" role="form" id="ow-summary">
 								<div class="form-group">
-									<label class="col-sm-2 control-label">Receipt Date</label>
+									<label class="col-sm-2 control-label"><b>Receipt Date</b></label>
 									<div class="col-sm-2">
-										<b>06/04/2015</b>
+										06/04/2015
 									</div>
 									<div class="col-sm-2"></div>
-                  <label class="col-sm-2 control-label">Request Corrective Action (Y/N)</label>
+                  <label class="col-sm-2 control-label"><b>Request Corrective Action (Y/N)</b></label>
                   <div class="col-sm-2">
-                   <b>Yes</b>
+                   Yes
                   </div>
                   <div class="col-sm-2"></div>
 								</div>
 
 								<div class="form-group">
-						<label class="col-sm-2 control-label">Type of Problem</label>
+						<label class="col-sm-2 control-label"><b>Type of Problem</b></label>
 						<div class="col-sm-2">
-							 <b>Quality</b><br>
-                <b>Delivery</b><br>
-                <b>Customer Service</b>
+							 Quality<br>
+                Delivery<br>
+                Customer Service
 						</div>
 						<div class="col-sm-2"></div>
-            <label class="col-sm-2 control-label">Deduction for Issue</label>
+            <label class="col-sm-2 control-label"><b>Deduction for Issue</b></label>
                   <div class="col-sm-2">
-                    <b>45</b>
+                    45
                   </div>
                   <div class="col-sm-2"></div>
 					</div>
 					<div class="form-group">
-						<label class="col-sm-2 control-label">Quality</label>
+						<label class="col-sm-2 control-label"><b>Quality</b></label>
 						<div class="col-sm-2">
-							<b>Critical</b>
+							Critical
 						</div>
             <div class="col-sm-2"></div>
-            <label class="col-sm-2 control-label">Recorded by</label>
+            <label class="col-sm-2 control-label"><b>Recorded by</b></label>
                   <div class="col-sm-2">
-                    <b>Nellson</b>
+                    Nellson
                   </div>
                   <div class="col-sm-2"></div>
 					</div>	
             <div class="form-group">
-            <label class="col-sm-2 control-label">Delivery</label>
+            <label class="col-sm-2 control-label"><b>Delivery</b></label>
             <div class="col-sm-2">
-              <b>Late 1 day</b>
+              Late 1 day
             </div>
             <div class="col-sm-2"></div>
-            <label class="col-sm-2 control-label">Recording Date</label>
+            <label class="col-sm-2 control-label"><b>Recording Date</b></label>
                   <div class="col-sm-2">
-                    <b>06/04/2015</b>
+                    06/04/2015
                   </div>
                   <div class="col-sm-2"></div>
           </div>  
             <div class="form-group">
-            <label class="col-sm-2 control-label">Customer Service</label>
+            <label class="col-sm-2 control-label"><b>Customer Service</b></label>
             <div class="col-sm-2">
-              <b>Critical Issue</b>
+              Critical Issue
             </div>
              <div class="col-sm-2"></div>
           </div> 
            <div class="form-group">
-            <label class="col-sm-2 control-label">Problem Details</label>
+            <label class="col-sm-2 control-label"><b>Problem Details</b></label>
             <div class="col-sm-2">
-              <b>Something comes here</b>
+              Something comes here
             </div>
              <div class="col-sm-2"></div>
           </div> 
            <div class="form-group">
-            <label class="col-sm-2 control-label">Problem Found at</label>
+            <label class="col-sm-2 control-label"><b>Problem Found at</b></label>
             <div class="col-sm-2">
-              <b>Receiving</b>
+              Receiving
             </div>
              <div class="col-sm-2"></div>
           </div> 
