--- a/forms/listFormRevision.html
+++ b/forms/listFormRevision.html
@@ -125,7 +125,7 @@
                                <i class="fa fa-plus-square"></i>
                                <span>Document</span>
                             </a>
-                             <ul class="sub">
+                             <ul class="sub sub-sub">
                               <li><a href="../document/addDocument.html">Add Document</a></li>
                               <li><a href="../document/viewDocumentRevision.html">View Revision</a></li>
                               <li><a href="../document/viewDocumentDetails.html">View Documents</a></li>
@@ -136,7 +136,7 @@
                                <i class="fa fa-plus-square"></i>
                                <span>Forms/Records</span>
                             </a>
-                             <ul class="sub">
+                             <ul class="sub sub-sub">
                               <li><a href="../forms/addForm.html">Add Form</a></li>
                               <li  class="active"><a href="../forms/viewFormRevision.html">View Revision</a></li>
                               <li><a href="../forms/viewFormDetails.html">View Forms</a></li>
@@ -225,61 +225,61 @@
 			<div class="box-content">
 				<form class="form-horizontal" role="form" id="ow-summary">
 					<div class="form-group">
-						<label class="col-sm-2 control-label">Form/Rec ID </label>
-						<div class="col-sm-2"><b>QMS-445</b></div>
+						<label class="col-sm-2 control-label"><b>Form/Rec ID </b></label>
+						<div class="col-sm-2">QMS-445</div>
 						<div class="col-sm-2"></div>
-						<label class="col-sm-2 control-label">Media Type </label>
+						<label class="col-sm-2 control-label"><b>Media Type </b></label>
 						<div class="col-sm-2">
-							<b>hardcopy</b>
+							hardcopy
 						</div>
 						<div class="col-sm-2"></div>
 					</div>
 
 					<div class="form-group">
-						<label class="col-sm-2 control-label">Form/Rec Title</label>
+						<label class="col-sm-2 control-label"><b>Form/Rec Title</b></label>
 						<div class="col-sm-2">
-							<b>New Document</b>
+							New Document
 						</div>
 						<div class="col-sm-2"></div>
-						<label class="col-sm-2 control-label">Responsibility</label>
+						<label class="col-sm-2 control-label"><b>Responsibility</b></label>
 						<div class="col-sm-2">
-							<b>Sample Process3</b>
+							Sample Process3
 						</div>
 						<div class="col-sm-2"></div>
 					</div>
 
 					<div class="form-group">
-						<label class="col-sm-2 control-label">Process</label>
+						<label class="col-sm-2 control-label"><b>Process</b></label>
 						<div class="col-sm-2">
-							<b>Manual</b>
+							Manual
 							</select>
 						</div>
 						<div class="col-sm-2"></div>
-						<label class="col-sm-2 control-label">Is this a Form ? (Y/N)</label>
+						<label class="col-sm-2 control-label"><b>Is this a Form ? (Y/N)</b></label>
 						<div class="col-sm-2">
-							<b>Yes</b>
+							Yes
 						</div>
 						<div class="col-sm-2"></div>
 					</div>
 
 					<div class="form-group">
-						<label class="col-sm-2 control-label">Retention Time</label>
+						<label class="col-sm-2 control-label"><b>Retention Time</b></label>
 						<div class="col-sm-2">
-								<b>1Month</b>
+								1Month
 							</div>
 						<div class="col-sm-2"></div>
-							<label class="col-sm-2 control-label">Location</label>
+							<label class="col-sm-2 control-label"><b>Location</b></label>
 							<div class="col-sm-2">
-								<b>Industry</b>
+								Industry
 							</div>
 						<div class="col-sm-2"></div>
 					</div>
 
 					<div class="form-group">
 						<div class="col-sm-6"></div>
-							<label class="col-sm-2 control-label">Upload File</label>
+							<label class="col-sm-2 control-label"><b>Upload File</b></label>
 							<div class="col-sm-2">
-								 <b>Qms.pdf</b>
+								 Qms.pdf
 							</div>
 						<div class="col-sm-2"></div>
 					</div>	
@@ -300,34 +300,34 @@
 						<div class="box-content">
 							<form class="form-horizontal" role="form" id="ow-summary">
 								<div class="form-group">
-									<label class="col-sm-2 control-label">Form/Rec ID</label>
+									<label class="col-sm-2 control-label"><b>Form/Rec ID</b></label>
 									<div class="col-sm-2">
-										<b>QMS-445</b>
+										QMS-445
 									</div>
 									<div class="col-sm-2"></div>
-									<label for="date_example" class="col-sm-2 control-label">Approved by Process owner</label>
+									<label for="date_example" class="col-sm-2 control-label"><b>Approved by Process owner</b></label>
 									<div class="col-sm-2">
-										<b>Owner1</b>
+										Owner1
 									</div>
 									<div class="col-sm-2"></div>
 								</div>
 
 								<div class="form-group">
-						<label class="col-sm-2 control-label">Date</label>
+						<label class="col-sm-2 control-label"><b>Date</b></label>
 						<div class="col-sm-2">
-							<b>06/07/2015</b>
+							06/07/2015
 						</div>
 						<div class="col-sm-2"></div>
-						<label class="col-sm-2 control-label">Comments</label>
+						<label class="col-sm-2 control-label"><b>Comments</b></label>
 						<div class="col-sm-2">
-							<b>Nothing</b>
+							Nothing
 						</div>
 						<div class="col-sm-2"></div>
 					</div>
 					<div class="form-group">
-						<label class="col-sm-2 control-label">Issuer </label>
+						<label class="col-sm-2 control-label"><b>Issuer </b></label>
 						<div class="col-sm-2">
-							<b>Sample Employee</b>
+							Sample Employee
 						</div>
 						<div class="col-sm-8"></div>
 					</div>	
