--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                <i class="fa fa-plus-square"></i>
                                <span>Document</span>
                             </a>
-                             <ul class="sub">
+                             <ul class="sub sub-sub">
                               <li><a href="document/addDocument.html">Add Document</a></li>
                               <li><a href="document/viewDocumentRevision.html">View Revision</a></li>
                               <li><a href="document/viewDocumentDetails.html">View Documents</a></li>
@@ -135,7 +135,7 @@
                                <i class="fa fa-plus-square"></i>
                                <span>Forms/Records</span>
                             </a>
-                             <ul class="sub">
+                             <ul class="sub sub-sub">
                               <li><a href="forms/addForm.html">Add Form</a></li>
                               <li><a href="forms/viewFormRevision.html">View Revision</a></li>
                               <li><a href="forms/viewFormDetails.html">View Forms</a></li>
