--- a/Customers/addCustomer.html
+++ b/Customers/addCustomer.html
@@ -125,7 +125,7 @@
                                <i class="fa fa-plus-square"></i>
                                <span>Document</span>
                             </a>
-                             <ul class="sub">
+                             <ul class="sub sub-sub">
                               <li><a href="../document/addDocument.html">Add Document</a></li>
                               <li><a href="../document/viewDocumentRevision.html">View Revision</a></li>
                               <li><a href="../document/viewDocumentDetails.html">View Documents</a></li>
@@ -136,7 +136,7 @@
                                <i class="fa fa-plus-square"></i>
                                <span>Forms/Records</span>
                             </a>
-                             <ul class="sub">
+                             <ul class="sub sub-sub">
                               <li><a href="../forms/addForm.html">Add Form</a></li>
                               <li><a href="../forms/viewFormRevision.html">View Revision</a></li>
                               <li><a href="../forms/viewFormDetails.html">View Forms</a></li>
@@ -224,74 +224,74 @@
 				<form class="form-horizontal" role="form">
 					<div class="form-group">
 						<label class="col-sm-2 control-label">Customer ID</label>
-						<div class="col-sm-4">
+						<div class="col-sm-3">
 							<input type="text" readonly="true" class="form-control" value="C1033" placeholder=""/>
 						</div>
-						<label class="col-sm-2 control-label">Website</label>
-						<div class="col-sm-4">
+						<div class="col-sm-1"></div><label class="col-sm-2 control-label">Website</label>
+						<div class="col-sm-3">
               <input type="text" class="form-control" id="" placeholder="www.example.com">
 						</div>
 					</div>
 
 					<div class="form-group">
 						<label class="col-sm-2 control-label">Customer Name</label>
-						<div class="col-sm-4">
+						<div class="col-sm-3">
 							 <input type="text" class="form-control" id="">
 						</div>
-						<label class="col-sm-2 control-label">Contact Name</label>
-						<div class="col-sm-4">
+						<div class="col-sm-1"></div><label class="col-sm-2 control-label">Contact Name</label>
+						<div class="col-sm-3">
 							<input type="text" class="form-control" placeholder="">
 						</div>
 					</div>
 
 					<div class="form-group">
 						<label class="col-sm-2 control-label">Address</label>
-						<div class="col-sm-4" >
+						<div class="col-sm-3" >
 							 <textarea class="form-control" rows="3">  </textarea>
 						</div>
-          <label class="col-sm-2 control-label">Contact Title</label>
-            <div class="col-sm-4">
+          <div class="col-sm-1"></div><label class="col-sm-2 control-label">Contact Title</label>
+            <div class="col-sm-3">
               <input type="text" class="form-control" placeholder="">
             </div>
 					</div>
             <div class="form-group">
             <label class="col-sm-2 control-label">City </label>
-            <div class="col-sm-4" >
+            <div class="col-sm-3" >
                <input type="text" class="form-control">
             </div>
-          <label class="col-sm-2 control-label">Telephone</label>
-            <div class="col-sm-4">
+          <div class="col-sm-1"></div><label class="col-sm-2 control-label">Telephone</label>
+            <div class="col-sm-3">
               <input type="text" class="form-control" placeholder="">
             </div>
           </div>
             <div class="form-group">
             <label class="col-sm-2 control-label">State </label>
-            <div class="col-sm-4" >
+            <div class="col-sm-3" >
                 <input type="text" class="form-control">
             </div>
-          <label class="col-sm-2 control-label">Fax </label>
-            <div class="col-sm-4">
+          <div class="col-sm-1"></div><label class="col-sm-2 control-label">Fax </label>
+            <div class="col-sm-3">
               <input type="text" class="form-control" placeholder="">
             </div>
           </div>
             <div class="form-group">
             <label class="col-sm-2 control-label">Country </label>
-            <div class="col-sm-4" >
+            <div class="col-sm-3">
               <input type="text" class="form-control">
             </div>
-          <label class="col-sm-2 control-label">Email </label>
-            <div class="col-sm-4">
+          <div class="col-sm-1"></div><label class="col-sm-2 control-label">Email </label>
+            <div class="col-sm-3">
               <input type="text" class="form-control" placeholder="">
             </div>
           </div>
             <div class="form-group">
             <label class="col-sm-2 control-label">ZipCode</label>
-            <div class="col-sm-4" >
+            <div class="col-sm-3">
                <input type="text" class="form-control">
             </div>
           </div>
 					<div class="form-group" id="hidebutton">
-						<div class="col-sm-7"></div>
+						<div class="col-sm-6"></div>
 						<div class="col-sm-3">					
 							<input type="button" value="Enter/Modify Feedback Details" onclick="showchildsection();"class=" btn btn-primary">
 						</div>
@@ -313,14 +313,14 @@
 							<form class="form-horizontal" role="form">
 								<div class="form-group">
 									<label class="col-sm-2 control-label">Date of Feedback</label>
-									<div class="col-sm-4">
-                        <input type="text" class="form-control" id="dueDate" placeholder="Date picker">
+									<div class="col-sm-3">
+                        <input type="text" class="form-control" id="dueDate" placeholder="Select Date">
 									</div>
 								</div>
 
 								<div class="form-group">
 									<label class="col-sm-2 control-label">Type of Feedback  </label>
-									<div class="col-sm-4">
+									<div class="col-sm-3">
                       <select class="form-control">
                         <option value="1">Complaint</option>
                         <option value="2">Suggestion</option>
@@ -333,7 +333,7 @@
 
 								<div class="form-group">
 									<label class="col-sm-2 control-label">Feedback Recorded by</label>
-									<div class="col-sm-4">
+									<div class="col-sm-3">
 										<select class="form-control">
                         <option value="1">Associate Name1</option>
                         <option value="2">Associate Name2</option>
@@ -343,19 +343,24 @@
 							</div>
               <div class="form-group">
                   <label class="col-sm-2 control-label">See Feedback Details Below</label>
-                  <div class="col-sm-4">
+                  <div class="col-sm-3">
                     <textarea class="form-control" rows="3"></textarea>
                   </div>
               </div>
               <div class="form-group">
                   <label class="col-sm-2 control-label">Attachments</label>
-                  <div class="col-sm-4">
-                       <input name="attachments"  id="" type="file" /> 
-                  </div>
+                 <div class="col-sm-3 input-group">
+                <span class="input-group-btn">
+                <button type="button" class="btn btn-primary btn-sm btn-file" id="browse">
+                        Browse&hellip;
+                 <input name="attachments"  id="electronicchecked" type="file" multiple/> 
+                </button></span>
+                 <input type="text" class="form-control uploadInput" readonly>
+             </div>
                   <div class="col-sm-6"></div>
               </div>
 							<div class="form-group" id="showbutton" style="display:none;">
-									<div class="col-sm-7"></div>
+									<div class="col-sm-6"></div>
 									<div class="col-sm-3">
 										<input type="button" value="Hide Enter/Modify Feedback Details" onclick="hidechildsection();"class="btn btn-primary">
 									</div>
