--- a/Maintenance/addMaintenance.html
+++ b/Maintenance/addMaintenance.html
@@ -125,7 +125,7 @@
                                <i class="fa fa-plus-square"></i>
                                <span>Document</span>
                             </a>
-                             <ul class="sub">
+                             <ul class="sub sub-sub">
                               <li><a href="../document/addDocument.html">Add Document</a></li>
                               <li><a href="../document/viewDocumentRevision.html">View Revision</a></li>
                               <li><a href="../document/viewDocumentDetails.html">View Documents</a></li>
@@ -136,7 +136,7 @@
                                <i class="fa fa-plus-square"></i>
                                <span>Forms/Records</span>
                             </a>
-                             <ul class="sub">
+                             <ul class="sub sub-sub">
                               <li><a href="../forms/addForm.html">Add Form</a></li>
                               <li><a href="../forms/viewFormRevision.html">View Revision</a></li>
                               <li><a href="../forms/viewFormDetails.html">View Forms</a></li>
@@ -224,22 +224,22 @@
 				<form class="form-horizontal style-form" role="form">
 					<div class="form-group">
 						<label class="col-sm-2 control-label">Equipment  ID </label>
-						<div class="col-sm-4">	
+						<div class="col-sm-3">	
 							<input type="text" class="form-control" placeholder="">
 						</div>
-						<label class="col-sm-2 control-label">Date Acquired </label>
-						<div class="col-sm-4">
-							<input type="text" id="dateAcquired" class="form-control">
+						<div class="col-sm-1"></div><label class="col-sm-2 control-label">Date Acquired </label>
+						<div class="col-sm-3">
+							<input type="text" id="dateAcquired" class="form-control" placeholder="Select Date">
 						</div>
 					</div>
 
 					<div class="form-group">
 						<label class="col-sm-2 control-label">Equipment Name</label>
-						<div class="col-sm-4">
+						<div class="col-sm-3">
 							<input type="text" class="form-control" placeholder="" data-toggle="tooltip" data-placement="bottom" title="Tooltip for name">
 						</div>
-						<label class="col-sm-2 control-label">Equipment Status</label>
-						<div class="col-sm-4">
+						<div class="col-sm-1"></div><label class="col-sm-2 control-label">Equipment Status</label>
+						<div class="col-sm-3">
 							<select class="form-control">
 								<option>- Select -</option>
 								<option>Active</option>
@@ -251,11 +251,11 @@
 
 					<div class="form-group">
 						<label class="col-sm-2 control-label">Equipment Model </label>
-						<div class="col-sm-4">
+						<div class="col-sm-3">
 						<input type="text" class="form-control">
 						</div>
-						<label class="col-sm-2 control-label">Frequency of Maintenance</label>
-						<div class="col-sm-2">
+						<div class="col-sm-1"></div><label class="col-sm-2 control-label">Frequency of Maintenance</label>
+						<div class="col-sm-1">
             <div class="checkbox">
               <label>
                 <input type="checkbox"> Weekly 
@@ -287,11 +287,11 @@
 					</div>
 					<div class="form-group">
 						<label class="col-sm-2 control-label">Serial Number </label>
-            <div class="col-sm-4">
+            <div class="col-sm-3">
             <input type="text" class="form-control">
             </div>
-							<div class="col-sm-2"></div>
-							<div class="col-sm-4">
+							<div class="col-sm-3"></div>
+							<div class="col-sm-3">
             <div class="checkbox">
               <label>
                 <input type="checkbox"> Annually
@@ -303,23 +303,34 @@
 
 					<div class="form-group">
 							<label class="col-sm-2 control-label">Instructions / Reference (optional)</label>
-							<div class="col-sm-4">
-								 <input name="attachments"  id="id_file" type="file" /> <br>
+							<div class="col-sm-3">
+								<div class="input-group">
+                <span class="input-group-btn">
+                <button type="button" class="btn btn-primary btn-sm btn-file" id="browse" >
+                        Browse&hellip;
+                 <input name="attachments"  id="instructionsReference" type="file" multiple/> 
+                </button></span>
+                 <input type="text" class="form-control uploadInput" readonly>
+             </div><br>
                   <textarea class="form-control" rows="3"></textarea>
 						 </div>
-             <label class="col-sm-2 control-label">External Document ? (Y/N)</label>
-            <div class="col-sm-4">
+             <div class="col-sm-1"></div><label class="col-sm-2 control-label">External Document ? (Y/N)</label>
+            <div class="col-sm-3">
               <div class="toggle-switch toggle-switch-primary">
-              <label>
-                <input type="checkbox" >
+                <label>
+                <input type="checkbox" id="externalDocumentYN" onchange="checkForIcon(this.id);">
                 <div class="toggle-switch-inner"></div>
-                <div class="toggle-switch-switch"><i class="fa fa-check"></i></div>
-              </label>
-            </div>
-            </div>
+                <div class="toggle-switch-switch">
+                  <span id="externalDocumentYN_check"><i class="fa fa-times"></i></span>
+                  <span id="externalDocumentYN_times" style="display:none;"><i class="fa fa-check"></i></span>
+                </div>
+                 </label>
+              </div>
+             
 					</div>
+        </div>
 					<div class="form-group" id="hidebutton">
-						<div class="col-sm-6"></div>
+						<div class="col-sm-5"></div>
 						<div class="col-sm-4">					
 							<input type="button" value="Enter/Modify Maintenance and Calibration" onclick="showchildsection();" class=" btn btn-primary ">
 						</div>
@@ -340,32 +351,32 @@
 							<form class="form-horizontal" role="form">
 								<div class="form-group">
 									<label class="col-sm-2 control-label">Equipment ID</label>
-									<div class="col-sm-4">
+									<div class="col-sm-3">
 										<input type="text" class="form-control" placeholder="" data-toggle="tooltip" data-placement="bottom" title="Tooltip for name">
 									</div>
-									<label class="col-sm-2 control-label">Due Date</label>
-									<div class="col-sm-4">
-                            <input type='text'  class="form-control" id="dueDate" />
+									<div class="col-sm-1"></div><label class="col-sm-2 control-label">Due Date</label>
+									<div class="col-sm-3">
+                            <input type='text'  class="form-control" id="dueDate" placeholder="Select Date"/>
 									</div>
 								</div>
 								<div class="form-group">
 						<label class="col-sm-2 control-label">Type of Maintenance</label>
-						<div class="col-sm-4">
+						<div class="col-sm-3">
 							<select class="form-control">
 				              	  <option value="0">Preventive</option>
 					              <option value="1">Corrective</option>
 					              <option value="2">Predictive</option>
 							</select>
 						</div>
-						<label class="col-sm-2 control-label">Completion Date</label>
-						<div class="col-sm-4">
-						     <input type='text'  class="form-control" id="completionDate" />
+						<div class="col-sm-1"></div><label class="col-sm-2 control-label">Completion Date</label>
+						<div class="col-sm-3">
+						     <input type='text'  class="form-control" id="completionDate" placeholder="Select Date"/>
 						</div>
 					</div>
 
 					<div class="form-group">
 						<label class="col-sm-2 control-label">Frequency of Maintenance</label>
-						<div class="col-sm-4">
+						<div class="col-sm-3">
 						    <select class="form-control">
                     <option> -Select-</option>
                 <option>Weekly</option>
@@ -375,8 +386,8 @@
                 <option>Annually</option>
               </select>
 						</div>
-						<label class="col-sm-2 control-label">Completed By</label>
-						<div class="col-sm-4">
+						<div class="col-sm-1"></div><label class="col-sm-2 control-label">Completed By</label>
+						<div class="col-sm-3">
 							<select class="form-control">
                   <option> -Select-</option>
 								<option>Jhon Smith</option>
@@ -389,13 +400,13 @@
 
 					<div class="form-group">
 						<label class="col-sm-2 control-label">Notes </label>
-						<div class="col-sm-4">
+						<div class="col-sm-3">
 							<textarea class="form-control" rows="3"></textarea>
 						</div>
 					</div>
 
 					<div class="form-group" id="showbutton" style="display:none;">
-						<div class="col-sm-6 "></div>
+						<div class="col-sm-5 "></div>
 						<div class="col-sm-4">
 							<input type="button" value="Hide Enter/Modify Maintenance and Calibration" onclick="hidechildsection();"class="btn btn-primary">
 						</div>
