--- a/ManagementReview/addManagementReview.html
+++ b/ManagementReview/addManagementReview.html
@@ -125,7 +125,7 @@
                                <i class="fa fa-plus-square"></i>
                                <span>Document</span>
                             </a>
-                             <ul class="sub">
+                             <ul class="sub sub-sub">
                               <li><a href="../document/addDocument.html">Add Document</a></li>
                               <li><a href="../document/viewDocumentRevision.html">View Revision</a></li>
                               <li><a href="../document/viewDocumentDetails.html">View Documents</a></li>
@@ -136,7 +136,7 @@
                                <i class="fa fa-plus-square"></i>
                                <span>Forms/Records</span>
                             </a>
-                             <ul class="sub">
+                             <ul class="sub sub-sub">
                               <li><a href="../forms/addForm.html">Add Form</a></li>
                               <li><a href="../forms/viewFormRevision.html">View Revision</a></li>
                               <li><a href="../forms/viewFormDetails.html">View Forms</a></li>
@@ -224,18 +224,18 @@
 				<form class="form-horizontal" role="form">
 					<div class="form-group">
 						<label class="col-sm-2 control-label">Review ID </label>
-						<div class="col-sm-4">
+						<div class="col-sm-3">
 							<input type="text" readonly="true" class="form-control" value="1029" placeholder=""/>
 						</div>
-						<label class="col-sm-2 control-label">Management Review Date</label>
-						<div class="col-sm-4">
-              <input type="text" class="form-control" id="reviewDate" placeholder="Date picker">
+						<div class="col-sm-1"></div><label class="col-sm-2 control-label">Management Review Date</label>
+						<div class="col-sm-3">
+              <input type="text" class="form-control" id="reviewDate" placeholder="Select Date">
 						</div>
 					</div>
 
 					<div class="form-group">
 						<label class="col-sm-2 control-label">Attendee List</label>
-						<div class="col-sm-3">
+						<div class="col-sm-2">
 							 <select class="form-control" id="attendeeList" onchange="showJobtitle(this.value);">
                 <option value="">- Select -</option>
                 <option value="Name 1">Name 1</option>
@@ -248,15 +248,15 @@
             <div class="col-sm-1" >
             <button type="button" id="plus"  onclick="addAttendee();" class="btn btn-primary btn-xs" value="">Add</button>
             </div>
-						<label class="col-sm-2 control-label">Next Management Review By </label>
-						<div class="col-sm-4">
+						<div class="col-sm-1"></div><label class="col-sm-2 control-label">Next Management Review By </label>
+						<div class="col-sm-3">
 							<input type="text" class="form-control" placeholder="">
 						</div>
 					</div>
 
 					<div class="form-group" style="display:none;" id="jobtitleDiv">
 						<label class="col-sm-2 control-label">Job Title</label>
-						<div class="col-sm-4" >
+						<div class="col-sm-3">
 							 <input type="text" readonly="true" id="jobTitle" value="jobtitle" class="form-control" placeholder="">
 						</div>
             <div class="col-sm-6"></div>
@@ -267,7 +267,7 @@
             </div>
         </div>
 					<div class="form-group" id="hidebutton">
-						<div class="col-sm-7"></div>
+						<div class="col-sm-6"></div>
 						<div class="col-sm-3">					
 							<input type="button" value="Enter/Modify Managment Details" onclick="showchildsection();"class=" btn btn-primary">
 						</div>
@@ -289,7 +289,7 @@
 							<form class="form-horizontal" role="form">
 								<div class="form-group">
 									<label class="col-sm-2 control-label">Category</label>
-									<div class="col-sm-4">
+									<div class="col-sm-3">
                       <select class="form-control">
                         <option value="">--Select--</option>
                                 <option value="ABCD">Audits</option>
@@ -299,65 +299,71 @@
                               <option value="PQR">Customer Satisfication</option>
                     </select>
 									</div>
-									<label class="col-sm-2 control-label">Report Link</label>
-									<div class="col-sm-4">
+									<div class="col-sm-1"></div><label class="col-sm-2 control-label">Report Link</label>
+									<div class="col-sm-3">
 									 <input type="text" class="form-control" placeholder="www.example.com">
 									</div>
 								</div>
 
 								<div class="form-group">
 									<label class="col-sm-2 control-label">Assessment </label>
-									<div class="col-sm-4">
+									<div class="col-sm-3">
                       <textarea class="form-control" rows="3"></textarea>
 									</div>
-									<label class="col-sm-2 control-label">Action Due Date</label>
-									<div class="col-sm-4">
-										<input type="text" class="form-control" id="dueDate" placeholder="Date picker">
+									<div class="col-sm-1"></div><label class="col-sm-2 control-label">Action Due Date</label>
+									<div class="col-sm-3">
+										<input type="text" class="form-control" id="dueDate" placeholder="Select Date">
 									</div>
 								</div>
 
 								<div class="form-group">
 									<label class="col-sm-2 control-label">Action Needed (Y/N)</label>
-									<div class="col-sm-4">
-										<div class="toggle-switch toggle-switch-primary">
-                      <label>
-                        <input type="checkbox" checked>
+									<div class="col-sm-3">
+										 <div class="toggle-switch toggle-switch-primary">
+                        <label>
+                        <input type="checkbox" id="actionNeededYN" onchange="checkForIcon(this.id);">
                         <div class="toggle-switch-inner"></div>
-                        <div class="toggle-switch-switch"><i class="fa fa-check"></i></div>
-                      </label>
-                    </div>
+                        <div class="toggle-switch-switch">
+                          <span id="actionNeededYN_check"><i class="fa fa-times"></i></span>
+                          <span id="actionNeededYN_times" style="display:none;"><i class="fa fa-check"></i></span>
+                        </div>
+                 </label>
+              </div>
 									</div>
-                    <label class="col-sm-2 control-label">Completion Date</label>
-                  <div class="col-sm-4">
-                    <input type="text" class="form-control" id="completionDate" placeholder="Date picker">
+                    <div class="col-sm-1"></div><label class="col-sm-2 control-label">Completion Date</label>
+                  <div class="col-sm-3">
+                    <input type="text" class="form-control" id="completionDate" placeholder="Select Date">
                   </div>
 							</div>
               <div class="form-group">
                   <label class="col-sm-2 control-label">Action Detail</label>
-                  <div class="col-sm-4">
+                  <div class="col-sm-3">
                     <input type="text" class="form-control" placeholder=""/>
                   </div>
-                  <label class="col-sm-2 control-label">Responsibility </label>
-                  <div class="col-sm-4">
+                  <div class="col-sm-1"></div><label class="col-sm-2 control-label">Responsibility </label>
+                  <div class="col-sm-3">
                     <input type="text" class="form-control"  placeholder="">
                   </div>
               </div>
               <div class="form-group">
                   <label class="col-sm-2 control-label">Continuous Improvement Project (Y/N)</label>
-                  <div class="col-sm-4">
+                  <div class="col-sm-3">
                     <div class="toggle-switch toggle-switch-primary">
-                      <label>
-                        <input type="checkbox" checked>
-                        <div class="toggle-switch-inner"></div>
-                        <div class="toggle-switch-switch"><i class="fa fa-check"></i></div>
-                      </label>
-                    </div>
+                <label>
+                      <input type="checkbox" id="continuousYN" onchange="checkForIcon(this.id);">
+                      <div class="toggle-switch-inner"></div>
+                      <div class="toggle-switch-switch">
+                        <span id="continuousYN_check"><i class="fa fa-times"></i></span>
+                        <span id="continuousYN_times" style="display:none;"><i class="fa fa-check"></i></span>
+                      </div>
+                </label>
+              </div>
                   </div>
                   <div class="col-sm-6"></div>
               </div>
 							<div class="form-group" id="showbutton" style="display:none;">
-									<div class="col-sm-7"></div>
-									<div class="col-sm-3">
+									<div class="col-sm-5"></div>
+									<div class="col-sm-4">
 										<input type="button" value="Hide Enter/Modify Managment Details" onclick="hidechildsection();"class="btn btn-primary">
 									</div>
 									<div class="col-sm-2">	
@@ -396,7 +402,7 @@
                Do you want to remove Attendee?
             </div>
              <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                 <button type="button" class="btn btn-theme" onclick="removeAttnedeeFromList()">Yes</button>
             </div>
         </div>
