--- a/document/viewDocumentDetails.html
+++ b/document/viewDocumentDetails.html
@@ -120,7 +120,7 @@
                                <i class="fa fa-plus-square"></i>
                                <span>Document</span>
                             </a>
-                             <ul class="sub">
+                             <ul class="sub sub-sub">
                               <li><a href="../document/addDocument.html">Add Document</a></li>
                               <li><a href="../document/viewDocumentRevision.html">View Revision</a></li>
                               <li class="active"><a href="../document/viewDocumentDetails.html">View Documents</a></li>
@@ -131,7 +131,7 @@
                                <i class="fa fa-plus-square"></i>
                                <span>Forms/Records</span>
                             </a>
-                             <ul class="sub">
+                             <ul class="sub sub-sub">
                               <li><a href="../forms/addForm.html">Add Form</a></li>
                               <li><a href="../forms/viewFormRevision.html">View Revision</a></li>
                               <li><a href="../forms/viewFormDetails.html">View Forms</a></li>
@@ -277,7 +277,7 @@
 							<td>title4</td>
 							<td>DocTyle</td>
 							<td>Process2</td>
-							<td><a href="#">Download</a> and Hard Copy</td>
+							<td><a href="#"><i class="fa fa-download"></i>Download</a> and Hard Copy</td>
 							<td>No</td>
 							<td><a href="../document/editDocument.html" onclick="editDocument();" title="Edit Document" data-toggle="modal"  data-placement="left"><i class="fa fa-edit btn-lg txt-edit"></i></a>&nbsp;
 								<a href="#" onclick="viewRevisionHistory();" title="View Revision History" data-toggle="modal" data-target="#myModal" data-placement="left"><i class="fa fa-tags txt-info"></i></a></td>
@@ -317,7 +317,7 @@
 							<td>title89</td>
 							<td>Health</td>
 							<td>Sample Process2</td>
-							<td><a href="#">Download</a> and Hard Copy</td>
+							<td><a href="#"><i class="fa fa-download"></i>Download</a> and Hard Copy</td>
 							<td>No</td>
 							<td><a href="../document/editDocument.html" onclick="editDocument();" title="Edit Document" data-toggle="modal"  data-placement="left"><i class="fa fa-edit btn-lg txt-edit"></i></a>&nbsp;
 								<a href="#" onclick="viewRevisionHistory();" title="View Revision History" data-toggle="modal" data-target="#myModal" data-placement="left"><i class="fa fa-tags txt-info"></i></a></td>
@@ -357,7 +357,7 @@
 							<td>title6</td>
 							<td>Manual</td>
 							<td>Sample Process2</td>
-							<td><a href="#">Download</a> and Hard Copy</td>
+							<td><a href="#"><i class="fa fa-download"></i>Download</a> and Hard Copy</td>
 							<td>yes</td>
 							<td><a href="../document/editDocument.html" onclick="editDocument();" title="Edit Document" data-toggle="modal"  data-placement="left"><i class="fa fa-edit btn-lg txt-edit"></i></a>&nbsp;
 								<a href="#" onclick="viewRevisionHistory();" title="View Revision History" data-toggle="modal" data-target="#myModal" data-placement="left"><i class="fa fa-tags txt-info"></i></a></td>
@@ -377,7 +377,7 @@
 							<td>title6</td>
 							<td>DocTyle</td>
 							<td>Sample Process2</td>
-							<td><a href="#">Download</a> and Hard Copy</td>
+							<td><a href="#"><i class="fa fa-download"></i>Download</a> and Hard Copy</td>
 							<td>yes</td>
 							<td><a href="../document/editDocument.html" onclick="editDocument();" title="Edit Document" data-toggle="modal"  data-placement="left"><i class="fa fa-edit btn-lg txt-edit"></i></a>&nbsp;
 								<a href="#" onclick="viewRevisionHistory();" title="View Revision History" data-toggle="modal" data-target="#myModal" data-placement="left"><i class="fa fa-tags txt-info"></i></a></td>
@@ -397,7 +397,7 @@
 							<td>titian</td>
 							<td>DocTyle</td>
 							<td>Sample Process2</td>
-							<td><a href="#">Download</a> and Hard Copy</td>
+							<td><a href="#"><i class="fa fa-download"></i>Download</a> and Hard Copy</td>
 							<td>yes</td>
 							<td><a href="../document/editDocument.html" onclick="editDocument();" title="Edit Document" data-toggle="modal"  data-placement="left"><i class="fa fa-edit btn-lg txt-edit"></i></a>&nbsp;
 								<a href="#" onclick="viewRevisionHistory();" title="View Revision History" data-toggle="modal" data-target="#myModal" data-placement="left"><i class="fa fa-tags txt-info"></i></a></td>
@@ -417,7 +417,7 @@
 							<td>title6</td>
 							<td>DocTyle</td>
 							<td>Sample Process2</td>
-							<td><a href="#">Download</a> and Hard Copy</td>
+							<td><a href="#"><i class="fa fa-download"></i>Download</a> and Hard Copy</td>
 							<td>yes</td>
 							<td><a href="../document/editDocument.html" onclick="editDocument();" title="Edit Document" data-toggle="modal"  data-placement="left"><i class="fa fa-edit btn-lg txt-edit"></i></a>&nbsp;
 								<a href="#" onclick="viewRevisionHistory();" title="View Revision History" data-toggle="modal" data-target="#myModal" data-placement="left"><i class="fa fa-tags txt-info"></i></a></td>
@@ -437,7 +437,7 @@
 							<td>title78</td>
 							<td>DocTyle</td>
 							<td>Sample </td>
-							<td><a href="#">Download</a> and Hard Copy</td>
+							<td><a href="#"><i class="fa fa-download"></i>Download</a> and Hard Copy</td>
 							<td>yes</td>
 							<td><a href="../document/editDocument.html" onclick="editDocument();" title="Edit Document" data-toggle="modal"  data-placement="left"><i class="fa fa-edit btn-lg txt-edit"></i></a>&nbsp;
 								<a href="#" onclick="viewRevisionHistory();" title="View Revision History" data-toggle="modal" data-target="#myModal" data-placement="left"><i class="fa fa-tags txt-info"></i></a></td>
@@ -457,7 +457,7 @@
 							<td>title6</td>
 							<td>DocTyle</td>
 							<td>Sample Process2</td>
-							<td><a href="#">Download</a> and Hard Copy</td>
+							<td><a href="#"><i class="fa fa-download"></i>Download</a> and Hard Copy</td>
 							<td>yes</td>
 							<td><a href="../document/editDocument.html" onclick="editDocument();" title="Edit Document" data-toggle="modal"  data-placement="left"><i class="fa fa-edit btn-lg txt-edit"></i></a>&nbsp;
 								<a href="#" onclick="viewRevisionHistory();" title="View Revision History" data-toggle="modal" data-target="#myModal" data-placement="left"><i class="fa fa-tags txt-info"></i></a></td>
@@ -497,7 +497,7 @@
 							<td>title6</td>
 							<td>DocTyle</td>
 							<td>Sample Process2</td>
-							<td><a  href="../document/listDocumentRevision.html">Download</a> and Hard Copy</td>
+							<td><a  href="../document/listDocumentRevision.html"><i class="fa fa-download"></i>Download</a> and Hard Copy</td>
 							<td>yes</td>
 							<td><a href="../document/editDocument.html" onclick="editDocument();" title="Edit Document" data-toggle="modal"  data-placement="left"><i class="fa fa-edit btn-lg txt-edit"></i></a>&nbsp;
 								<a href="#" onclick="viewRevisionHistory();" title="View Revision History" data-toggle="modal" data-target="#myModal" data-placement="left"><i class="fa fa-tags txt-info"></i></a></td>
@@ -517,7 +517,7 @@
 							<td>titl</td>
 							<td>DocTyle</td>
 							<td>Sample Process2</td>
-							<td><a  href="../document/listDocumentRevision.html">Download</a> and Hard Copy</td>
+							<td><a  href="../document/listDocumentRevision.html"><i class="fa fa-download"></i>Download</a> and Hard Copy</td>
 							<td>yes</td>
 							<td><a href="../document/editDocument.html" onclick="editDocument();" title="Edit Document" data-toggle="tooltip"  data-placement="left"><i class="fa fa-edit btn-lg txt-edit"></i></a>&nbsp;
 								<a href="#" onclick="viewRevisionHistory();" title="View Revision History" data-toggle="tooltip" data-target="#myModal" data-placement="left"><i class="fa fa-tags txt-info"></i></a></td>
